commit bilingual contents

--- a/docs/visual-basic/misc/bc33008.md
+++ b/docs/visual-basic/misc/bc33008.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC33008
 ms.assetid: 8c44456b-8fd2-4168-ad8c-b6da129242ba
-ms.openlocfilehash: 87ca560683d5454b30a25bcec4812f9749879743
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8ab5067a3b08e7d450453e9d5adc3fa592ad6f03
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53779921"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54639993"
 ---
-# <a name="exit-operator-is-not-valid-use-return-to-exit-an-operator"></a><span data-ttu-id="b25c1-103">'Exit Operator'가 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b25c1-103">'Exit Operator' is not valid.</span></span> <span data-ttu-id="b25c1-104">연산자를 종료하려면 'Return'을 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="b25c1-104">Use 'Return' to exit an Operator</span></span>
-<span data-ttu-id="b25c1-105">`Exit Operator` 문이 `Operator` 프로시저에 나타납니다.</span><span class="sxs-lookup"><span data-stu-id="b25c1-105">An `Exit Operator` statement appears in an `Operator` procedure.</span></span>  
+# <a name="exit-operator-is-not-valid-use-return-to-exit-an-operator"></a><span data-ttu-id="8d15b-103">'Exit Operator'가 잘못되었습니다.</span><span class="sxs-lookup"><span data-stu-id="8d15b-103">'Exit Operator' is not valid.</span></span> <span data-ttu-id="8d15b-104">연산자를 종료하려면 'Return'을 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="8d15b-104">Use 'Return' to exit an Operator</span></span>
+<span data-ttu-id="8d15b-105">`Exit Operator` 문이 `Operator` 프로시저에 나타납니다.</span><span class="sxs-lookup"><span data-stu-id="8d15b-105">An `Exit Operator` statement appears in an `Operator` procedure.</span></span>  
   
- <span data-ttu-id="b25c1-106">사용 해야 합니다는 [Return 문이](../../visual-basic/language-reference/statements/return-statement.md) 에서 반환 하는 `Operator` 프로시저입니다.</span><span class="sxs-lookup"><span data-stu-id="b25c1-106">You must use a [Return Statement](../../visual-basic/language-reference/statements/return-statement.md) to return from an `Operator` procedure.</span></span> <span data-ttu-id="b25c1-107">[Exit 문](../../visual-basic/language-reference/statements/exit-statement.md) 받아들이지 않는 합니다 `Operator` 키워드를 및 `End Operator` 문은 호출 코드로 컨트롤을 반환 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="b25c1-107">The [Exit Statement](../../visual-basic/language-reference/statements/exit-statement.md) does not accept the `Operator` keyword, and the `End Operator` statement does not return control to the calling code.</span></span>  
+ <span data-ttu-id="8d15b-106">사용 해야 합니다는 [Return 문이](../../visual-basic/language-reference/statements/return-statement.md) 에서 반환 하는 `Operator` 프로시저입니다.</span><span class="sxs-lookup"><span data-stu-id="8d15b-106">You must use a [Return Statement](../../visual-basic/language-reference/statements/return-statement.md) to return from an `Operator` procedure.</span></span> <span data-ttu-id="8d15b-107">[Exit 문](../../visual-basic/language-reference/statements/exit-statement.md) 받아들이지 않는 합니다 `Operator` 키워드를 및 `End Operator` 문은 호출 코드로 컨트롤을 반환 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8d15b-107">The [Exit Statement](../../visual-basic/language-reference/statements/exit-statement.md) does not accept the `Operator` keyword, and the `End Operator` statement does not return control to the calling code.</span></span>  
   
- <span data-ttu-id="b25c1-108">**오류 ID:** BC33008</span><span class="sxs-lookup"><span data-stu-id="b25c1-108">**Error ID:** BC33008</span></span>  
+ <span data-ttu-id="8d15b-108">**오류 ID:** BC33008</span><span class="sxs-lookup"><span data-stu-id="8d15b-108">**Error ID:** BC33008</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b25c1-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b25c1-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8d15b-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8d15b-109">To correct this error</span></span>  
   
--   <span data-ttu-id="b25c1-110">`Exit Operator` 문을 `Return` 문으로 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="b25c1-110">Replace the `Exit Operator` statement with a `Return` statement.</span></span>  
+-   <span data-ttu-id="8d15b-110">`Exit Operator` 문을 `Return` 문으로 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="8d15b-110">Replace the `Exit Operator` statement with a `Return` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b25c1-111">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b25c1-111">See Also</span></span>  
- [<span data-ttu-id="b25c1-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="b25c1-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [<span data-ttu-id="b25c1-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="b25c1-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="b25c1-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="b25c1-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="b25c1-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="b25c1-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="8d15b-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="8d15b-111">See also</span></span>
+- [<span data-ttu-id="8d15b-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="8d15b-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="8d15b-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="8d15b-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="8d15b-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="8d15b-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="8d15b-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="8d15b-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
