--- a/docs/visual-basic/misc/bc30593.md
+++ b/docs/visual-basic/misc/bc30593.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30593
 ms.assetid: 2500b776-7fa4-4272-8cc7-204593706651
-ms.openlocfilehash: 289838d7cfe61ad4fedd7d32f09fd7e6045debad
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e5b6938b48b660e3cbe6c1c06a3a282200bf29e8
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772212"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54639499"
 ---
-# <a name="variables-in-modules-cannot-be-declared-ltspecifiergt"></a><span data-ttu-id="2e8b3-102">모듈의 변수를 선언할 수 없습니다. '&lt;지정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="2e8b3-102">Variables in Modules cannot be declared '&lt;specifier&gt;'</span></span>
-<span data-ttu-id="2e8b3-103">`MustInherit`문의 변수에 `Module` 와 같은 지정자를 사용했습니다.</span><span class="sxs-lookup"><span data-stu-id="2e8b3-103">You have used a specifier, such as `MustInherit`, on a variable in a `Module` statement.</span></span> <span data-ttu-id="2e8b3-104">모듈은 인스턴스화될 수 없고 상속을 지원하지 않으며 인터페이스를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="2e8b3-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
+# <a name="variables-in-modules-cannot-be-declared-ltspecifiergt"></a><span data-ttu-id="acce8-102">모듈의 변수를 선언할 수 없습니다. '&lt;지정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="acce8-102">Variables in Modules cannot be declared '&lt;specifier&gt;'</span></span>
+<span data-ttu-id="acce8-103">`MustInherit`문의 변수에 `Module` 와 같은 지정자를 사용했습니다.</span><span class="sxs-lookup"><span data-stu-id="acce8-103">You have used a specifier, such as `MustInherit`, on a variable in a `Module` statement.</span></span> <span data-ttu-id="acce8-104">모듈은 인스턴스화될 수 없고 상속을 지원하지 않으며 인터페이스를 구현할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="acce8-104">Modules can never be instantiated, do not support inheritance, and cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="2e8b3-105">**오류 ID:** BC30593</span><span class="sxs-lookup"><span data-stu-id="2e8b3-105">**Error ID:** BC30593</span></span>  
+ <span data-ttu-id="acce8-105">**오류 ID:** BC30593</span><span class="sxs-lookup"><span data-stu-id="acce8-105">**Error ID:** BC30593</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2e8b3-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2e8b3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="acce8-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="acce8-106">To correct this error</span></span>  
   
--   <span data-ttu-id="2e8b3-107">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="2e8b3-107">Remove the specifier.</span></span>  
+-   <span data-ttu-id="acce8-107">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="acce8-107">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2e8b3-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="2e8b3-108">See Also</span></span>  
- [<span data-ttu-id="2e8b3-109">Module 문</span><span class="sxs-lookup"><span data-stu-id="2e8b3-109">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a><span data-ttu-id="acce8-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="acce8-108">See also</span></span>
+- [<span data-ttu-id="acce8-109">Module 문</span><span class="sxs-lookup"><span data-stu-id="acce8-109">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
