--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30625
 ms.assetid: d51d5f1c-16f5-401c-be3a-0470eb9bb812
-ms.openlocfilehash: d5f3d5c691fe4e8ecfddcad4c89677a697a6c883
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: deb5eab0736b82e7aa945ea0ef2fcc7ac8dec716
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53778621"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54607227"
 ---
-# <a name="module-statement-must-end-with-a-matching-end-module"></a><span data-ttu-id="18b65-102">'Module' 문은 짝이 되는 'End Module'로 끝나야 합니다.</span><span class="sxs-lookup"><span data-stu-id="18b65-102">'Module' statement must end with a matching 'End Module'</span></span>
-<span data-ttu-id="18b65-103">모듈 블록은 `End Module` 문으로 끝나야 합니다.</span><span class="sxs-lookup"><span data-stu-id="18b65-103">Module blocks must end with an `End Module` statement.</span></span>  
+# <a name="module-statement-must-end-with-a-matching-end-module"></a><span data-ttu-id="26fac-102">'Module' 문은 짝이 되는 'End Module'로 끝나야 합니다.</span><span class="sxs-lookup"><span data-stu-id="26fac-102">'Module' statement must end with a matching 'End Module'</span></span>
+<span data-ttu-id="26fac-103">모듈 블록은 `End Module` 문으로 끝나야 합니다.</span><span class="sxs-lookup"><span data-stu-id="26fac-103">Module blocks must end with an `End Module` statement.</span></span>  
   
- <span data-ttu-id="18b65-104">**오류 ID:** BC30625</span><span class="sxs-lookup"><span data-stu-id="18b65-104">**Error ID:** BC30625</span></span>  
+ <span data-ttu-id="26fac-104">**오류 ID:** BC30625</span><span class="sxs-lookup"><span data-stu-id="26fac-104">**Error ID:** BC30625</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="18b65-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="18b65-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="26fac-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="26fac-105">To correct this error</span></span>  
   
--   <span data-ttu-id="18b65-106">`End Module` 블록 끝에 `Module` 문을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="18b65-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
+-   <span data-ttu-id="26fac-106">`End Module` 블록 끝에 `Module` 문을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="26fac-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="18b65-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="18b65-107">See Also</span></span>  
- [<span data-ttu-id="18b65-108">최종 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="18b65-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+## <a name="see-also"></a><span data-ttu-id="26fac-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="26fac-107">See also</span></span>
+- [<span data-ttu-id="26fac-108">최종 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="26fac-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
