--- a/docs/visual-basic/misc/bc32111.md
+++ b/docs/visual-basic/misc/bc32111.md
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32111
 ms.assetid: b03b5840-5318-4844-b2da-1bca4c28d097
-ms.openlocfilehash: d545160148938dade07adda19cb9fe917f7df4a3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 5acedc24d98fb4d8fc9b8a10e1d060d9f8dfd49d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761508"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54638316"
 ---
-# <a name="indirect-constraint-ltconstraint1gt-obtained-from-the-type-parameter-constraint-lttypeparameter1gt-conflicts-with-the-constraint-ltconstraint2gt"></a><span data-ttu-id="6699d-102">간접 제약 조건 '&lt;constraint1&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'제약 조건과 충돌'&lt;constraint2&gt;'</span><span class="sxs-lookup"><span data-stu-id="6699d-102">Indirect constraint '&lt;constraint1&gt;' obtained from the type parameter constraint '&lt;typeparameter1&gt;' conflicts with the constraint '&lt;constraint2&gt;'</span></span>
-<span data-ttu-id="6699d-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="6699d-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
+# <a name="indirect-constraint-ltconstraint1gt-obtained-from-the-type-parameter-constraint-lttypeparameter1gt-conflicts-with-the-constraint-ltconstraint2gt"></a><span data-ttu-id="90414-102">간접 제약 조건 '&lt;constraint1&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'제약 조건과 충돌'&lt;constraint2&gt;'</span><span class="sxs-lookup"><span data-stu-id="90414-102">Indirect constraint '&lt;constraint1&gt;' obtained from the type parameter constraint '&lt;typeparameter1&gt;' conflicts with the constraint '&lt;constraint2&gt;'</span></span>
+<span data-ttu-id="90414-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="90414-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
   
- <span data-ttu-id="6699d-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6699d-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="90414-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="90414-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t1 As {t2, Class}, t2 As Structure)`  
   
- <span data-ttu-id="6699d-105">간접 제약 조건 `Structure` 및 직접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="6699d-105">The indirect constraint `Structure` and the direct constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="90414-105">간접 제약 조건 `Structure` 및 직접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="90414-105">The indirect constraint `Structure` and the direct constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="6699d-106">**오류 ID:** BC32111</span><span class="sxs-lookup"><span data-stu-id="6699d-106">**Error ID:** BC32111</span></span>  
+ <span data-ttu-id="90414-106">**오류 ID:** BC32111</span><span class="sxs-lookup"><span data-stu-id="90414-106">**Error ID:** BC32111</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6699d-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6699d-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="90414-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="90414-107">To correct this error</span></span>  
   
--   <span data-ttu-id="6699d-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="6699d-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
+-   <span data-ttu-id="90414-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="90414-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6699d-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="6699d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="90414-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="90414-109">See also</span></span>
 
-- [<span data-ttu-id="6699d-110">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="6699d-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="6699d-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="6699d-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
-- [<span data-ttu-id="6699d-112">구조체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="6699d-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
-- [<span data-ttu-id="6699d-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="6699d-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
-- [<span data-ttu-id="6699d-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="6699d-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="90414-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="90414-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="90414-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="90414-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="90414-112">구조체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="90414-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="90414-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="90414-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
+- [<span data-ttu-id="90414-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="90414-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
