--- a/docs/visual-basic/misc/bc30090.md
+++ b/docs/visual-basic/misc/bc30090.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30090
 ms.assetid: 302b26b8-8fa4-4e49-86f0-d7c49fec485f
-ms.openlocfilehash: 0c12481255d74a7a89972bbcfd12dd3ee28abc97
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 0135ab48623ca26c599d1adbb2bb4fbc47fa439e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782696"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54624602"
 ---
 # <a name="end-while-must-be-preceded-by-a-matching-while"></a>'End While'은 짝이 되는 'While' 뒤에 와야 합니다.
 `End While` 문이 해당 `While` 문 없이 발생합니다. `End While` 은 해당 `While` 문 뒤에 와야 합니다.  
@@ -27,5 +27,5 @@ ms.locfileid: "53782696"
   
 3.  이 `While` 블록의 형식이 올바르게 설정되었는지 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [While...End While 문](../../visual-basic/language-reference/statements/while-end-while-statement.md)
+## <a name="see-also"></a>참고자료
+- [While...End While 문](../../visual-basic/language-reference/statements/while-end-while-statement.md)
