--- a/docs/visual-basic/misc/bc30225.md
+++ b/docs/visual-basic/misc/bc30225.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30225
 ms.assetid: 56970b37-7262-4a8f-ac01-2bb2cc8503de
-ms.openlocfilehash: eb354da1c1453e1af2015a363c855efae1ac9d8c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: efc971ec2471a1a18c850fe7e9461557fcb680c1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781897"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54622739"
 ---
 # <a name="option-ltspecifiergt-statement-can-only-appear-once-per-file"></a>' 옵션 &lt;지정자&gt;' 문을 하나만 사용할 수 있습니다 파일당
 `Option Compare`, `Option Explicit`및 `Option Strict` 문은 같은 소스 파일에서 각각 한 번만 사용할 수 있습니다.  
@@ -23,8 +23,8 @@ ms.locfileid: "53781897"
   
 -   중복된 `Option` 문을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a>참고자료
+- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
