--- a/docs/visual-basic/misc/bc30978.md
+++ b/docs/visual-basic/misc/bc30978.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30978
 ms.assetid: 806d94c1-653f-40c0-b1c4-95661c76a392
-ms.openlocfilehash: 8d752139b1351b1ab358c4b2a23df98bae6e398f
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8cad1840be2f415ddd57e4243e1b83f464d5d9bb
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33619371"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54624290"
 ---
 # <a name="range-variable-ltvariablegt-hides-a-variable-in-an-enclosing-block-or-a-range-variable-previously-defined-in-the-query-expression"></a>범위 변수 &lt;변수&gt; 바깥쪽 블록의 변수 또는 쿼리 식에서 이전에 정의한 범위 변수를 숨깁니다.
 쿼리의 범위 변수가 동일한 범위 내에서 이전에 정의된 변수 또는 쿼리 내에서 이전에 정의된 범위 변수와 이름이 같습니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "33619371"
   
 -   중복된 제어 변수 이름을 가진 중첩된 쿼리를 괄호로 묶어 각 범위 변수에 대한 범위를 구분합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
