--- a/docs/visual-basic/misc/bc30979.md
+++ b/docs/visual-basic/misc/bc30979.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30979
 ms.assetid: ba826ab9-8a8a-48ed-8661-34944f0145e5
-ms.openlocfilehash: 00478b027bd311882e479562757f3390c5616d45
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3712d8121228fe2408ae6a8d4a23a4220f3e9336
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766699"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54587884"
 ---
 # <a name="option-infer-can-be-followed-only-by-on-or-off"></a>'Option Infer' 뒤에는 'On' 또는 'Off'만 올 수 있습니다.
 `Option Infer` 문은 `On` 또는 `Off`를 지정해야 합니다. 다른 값이 잘못되었습니다.  
@@ -23,9 +23,9 @@ ms.locfileid: "53766699"
   
 -   `Option Infer On` 또는 `Option Infer Off`를 지정합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [Option Infer 문](../../visual-basic/language-reference/statements/option-infer-statement.md)  
- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a>참고자료
+- [옵션 \<키워드 > 문](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [Option Compare 문](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [Option Explicit 문](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [Option Infer 문](../../visual-basic/language-reference/statements/option-infer-statement.md)
+- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
