--- a/docs/visual-basic/misc/bc30225.md
+++ b/docs/visual-basic/misc/bc30225.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30225
 ms.assetid: 56970b37-7262-4a8f-ac01-2bb2cc8503de
-ms.openlocfilehash: eb354da1c1453e1af2015a363c855efae1ac9d8c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: efc971ec2471a1a18c850fe7e9461557fcb680c1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781897"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54622739"
 ---
-# <a name="option-ltspecifiergt-statement-can-only-appear-once-per-file"></a><span data-ttu-id="12bc3-102">' 옵션 &lt;지정자&gt;' 문을 하나만 사용할 수 있습니다 파일당</span><span class="sxs-lookup"><span data-stu-id="12bc3-102">'Option &lt;specifier&gt;' statement can only appear once per file</span></span>
-<span data-ttu-id="12bc3-103">`Option Compare`, `Option Explicit`및 `Option Strict` 문은 같은 소스 파일에서 각각 한 번만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="12bc3-103">The `Option Compare`, `Option Explicit`, and `Option Strict` statements can only be used one time each in the same source file.</span></span>  
+# <a name="option-ltspecifiergt-statement-can-only-appear-once-per-file"></a><span data-ttu-id="affe2-102">' 옵션 &lt;지정자&gt;' 문을 하나만 사용할 수 있습니다 파일당</span><span class="sxs-lookup"><span data-stu-id="affe2-102">'Option &lt;specifier&gt;' statement can only appear once per file</span></span>
+<span data-ttu-id="affe2-103">`Option Compare`, `Option Explicit`및 `Option Strict` 문은 같은 소스 파일에서 각각 한 번만 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="affe2-103">The `Option Compare`, `Option Explicit`, and `Option Strict` statements can only be used one time each in the same source file.</span></span>  
   
- <span data-ttu-id="12bc3-104">**오류 ID:** BC30225</span><span class="sxs-lookup"><span data-stu-id="12bc3-104">**Error ID:** BC30225</span></span>  
+ <span data-ttu-id="affe2-104">**오류 ID:** BC30225</span><span class="sxs-lookup"><span data-stu-id="affe2-104">**Error ID:** BC30225</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="12bc3-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="12bc3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="affe2-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="affe2-105">To correct this error</span></span>  
   
--   <span data-ttu-id="12bc3-106">중복된 `Option` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="12bc3-106">Remove the duplicated `Option` statement.</span></span>  
+-   <span data-ttu-id="affe2-106">중복된 `Option` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="affe2-106">Remove the duplicated `Option` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="12bc3-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="12bc3-107">See Also</span></span>  
- [<span data-ttu-id="12bc3-108">옵션 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="12bc3-108">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [<span data-ttu-id="12bc3-109">Option Compare 문</span><span class="sxs-lookup"><span data-stu-id="12bc3-109">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)  
- [<span data-ttu-id="12bc3-110">Option Explicit 문</span><span class="sxs-lookup"><span data-stu-id="12bc3-110">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)  
- [<span data-ttu-id="12bc3-111">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="12bc3-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+## <a name="see-also"></a><span data-ttu-id="affe2-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="affe2-107">See also</span></span>
+- [<span data-ttu-id="affe2-108">옵션 \<키워드 > 문</span><span class="sxs-lookup"><span data-stu-id="affe2-108">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)
+- [<span data-ttu-id="affe2-109">Option Compare 문</span><span class="sxs-lookup"><span data-stu-id="affe2-109">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)
+- [<span data-ttu-id="affe2-110">Option Explicit 문</span><span class="sxs-lookup"><span data-stu-id="affe2-110">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [<span data-ttu-id="affe2-111">Option Strict 문</span><span class="sxs-lookup"><span data-stu-id="affe2-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
