--- a/docs/visual-basic/misc/bc36632.md
+++ b/docs/visual-basic/misc/bc36632.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36632
 ms.assetid: 5d636359-4b4d-4f0b-8ca0-b0e6bc538dab
-ms.openlocfilehash: 4934caf593f679c7b7353964143bb67efc11870e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 0f5503bf16d710c9cf042dcf65256317b760681b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33632043"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54539352"
 ---
 # <a name="nullable-parameters-must-specify-a-type"></a>Nullable 매개 변수에 형식을 지정해야 합니다.
 매개 변수가 nullable 형식의 한정자(?)를 포함하지만 형식을 지정하지 않았습니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "33632043"
   
 -   nullable 매개 변수를 선언할 때 형식을 지정합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a>참고자료
+- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
