--- a/docs/visual-basic/misc/bc30282.md
+++ b/docs/visual-basic/misc/bc30282.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30282
 ms.assetid: c51b172f-fbd7-4ef5-8276-01a4bf6ed35b
-ms.openlocfilehash: 68a4a1c76ce7917ecd81a6ee4787a99413713eb2
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 13a6a37884c0951efdc5d77561d02ed174650668
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33609186"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54555351"
 ---
-# <a name="constructor-call-is-valid-only-as-the-first-statement-in-an-instance-constructor"></a><span data-ttu-id="b2ced-102">인스턴스 생성자의 첫째 문으로만 생성자를 호출할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b2ced-102">Constructor call is valid only as the first statement in an instance constructor</span></span>
-<span data-ttu-id="b2ced-103">`New()` 호출이 생성자의 첫 번째 문 다음에 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="b2ced-103">A call to `New()` occurs after the first statement of a constructor.</span></span> <span data-ttu-id="b2ced-104">한 생성자가 다른 생성자를 명시적으로 호출하는 경우 `Sub New()` 문 다음의 첫 번째 문에서 호출해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b2ced-104">If one constructor calls another explicitly, it must do so in the first statement following the `Sub New()` statement.</span></span>  
+# <a name="constructor-call-is-valid-only-as-the-first-statement-in-an-instance-constructor"></a><span data-ttu-id="04058-102">인스턴스 생성자의 첫째 문으로만 생성자를 호출할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="04058-102">Constructor call is valid only as the first statement in an instance constructor</span></span>
+<span data-ttu-id="04058-103">`New()` 호출이 생성자의 첫 번째 문 다음에 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="04058-103">A call to `New()` occurs after the first statement of a constructor.</span></span> <span data-ttu-id="04058-104">한 생성자가 다른 생성자를 명시적으로 호출하는 경우 `Sub New()` 문 다음의 첫 번째 문에서 호출해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="04058-104">If one constructor calls another explicitly, it must do so in the first statement following the `Sub New()` statement.</span></span>  
   
- <span data-ttu-id="b2ced-105">**오류 ID:** BC30282</span><span class="sxs-lookup"><span data-stu-id="b2ced-105">**Error ID:** BC30282</span></span>  
+ <span data-ttu-id="04058-105">**오류 ID:** BC30282</span><span class="sxs-lookup"><span data-stu-id="04058-105">**Error ID:** BC30282</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b2ced-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b2ced-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="04058-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="04058-106">To correct this error</span></span>  
   
--   <span data-ttu-id="b2ced-107">`New()`호출을 제거하거나 생성자의 시작 부분으로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="b2ced-107">Remove the call to `New()`, or move it to the beginning of the constructor.</span></span>  
+-   <span data-ttu-id="04058-107">`New()`호출을 제거하거나 생성자의 시작 부분으로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="04058-107">Remove the call to `New()`, or move it to the beginning of the constructor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b2ced-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b2ced-108">See Also</span></span>  
- [<span data-ttu-id="b2ced-109">생성자</span><span class="sxs-lookup"><span data-stu-id="b2ced-109">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a><span data-ttu-id="04058-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="04058-108">See also</span></span>
+- [<span data-ttu-id="04058-109">생성자</span><span class="sxs-lookup"><span data-stu-id="04058-109">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
