--- a/docs/visual-basic/misc/bc36632.md
+++ b/docs/visual-basic/misc/bc36632.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36632
 ms.assetid: 5d636359-4b4d-4f0b-8ca0-b0e6bc538dab
-ms.openlocfilehash: 4934caf593f679c7b7353964143bb67efc11870e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 0f5503bf16d710c9cf042dcf65256317b760681b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33632043"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54539352"
 ---
-# <a name="nullable-parameters-must-specify-a-type"></a><span data-ttu-id="a4298-102">Nullable 매개 변수에 형식을 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a4298-102">Nullable parameters must specify a type</span></span>
-<span data-ttu-id="a4298-103">매개 변수가 nullable 형식의 한정자(?)를 포함하지만 형식을 지정하지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="a4298-103">A parameter includes the nullable type modifier (?) but does not specify a type.</span></span>  
+# <a name="nullable-parameters-must-specify-a-type"></a><span data-ttu-id="18137-102">Nullable 매개 변수에 형식을 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="18137-102">Nullable parameters must specify a type</span></span>
+<span data-ttu-id="18137-103">매개 변수가 nullable 형식의 한정자(?)를 포함하지만 형식을 지정하지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="18137-103">A parameter includes the nullable type modifier (?) but does not specify a type.</span></span>  
   
- <span data-ttu-id="a4298-104">**오류 ID:** BC36632</span><span class="sxs-lookup"><span data-stu-id="a4298-104">**Error ID:** BC36632</span></span>  
+ <span data-ttu-id="18137-104">**오류 ID:** BC36632</span><span class="sxs-lookup"><span data-stu-id="18137-104">**Error ID:** BC36632</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a4298-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a4298-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="18137-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="18137-105">To correct this error</span></span>  
   
--   <span data-ttu-id="a4298-106">nullable 매개 변수를 선언할 때 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="a4298-106">Specify a type when declaring the nullable parameter.</span></span>  
+-   <span data-ttu-id="18137-106">nullable 매개 변수를 선언할 때 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="18137-106">Specify a type when declaring the nullable parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a4298-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a4298-107">See Also</span></span>  
- [<span data-ttu-id="a4298-108">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="a4298-108">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a><span data-ttu-id="18137-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="18137-107">See also</span></span>
+- [<span data-ttu-id="18137-108">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="18137-108">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
