--- a/docs/visual-basic/misc/bc30088.md
+++ b/docs/visual-basic/misc/bc30088.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30088
 ms.assetid: 9de8c0d4-4ce9-45cf-98d6-8f68bba507a5
-ms.openlocfilehash: 8713c4f7753a9745a2049a743a8fd6f5f648fb1f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: c3baa1955052662acd94110866905e0f8d166fb2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763645"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54524375"
 ---
 # <a name="end-select-must-be-preceded-by-a-matching-select-case"></a>'End Select'는 짝이 되는 'Select Case' 뒤에 와야 합니다.
 `End Select` 문이 해당 `Select` 또는 `Select Case` 문 없이 발생합니다. `End Select` 는 `Select` 또는 `Select Case` 문 뒤에 와야 합니다.  
@@ -27,5 +27,5 @@ ms.locfileid: "53763645"
   
 3.  이 `Select` 블록의 형식이 올바르게 설정되었는지 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Select...Case 문](../../visual-basic/language-reference/statements/select-case-statement.md)
+## <a name="see-also"></a>참고자료
+- [Select...Case 문](../../visual-basic/language-reference/statements/select-case-statement.md)
