--- a/docs/visual-basic/misc/bc30465.md
+++ b/docs/visual-basic/misc/bc30465.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30465
 ms.assetid: 726365f6-d6fc-454a-a43b-afa41bfea82a
-ms.openlocfilehash: db3aeff153d3f6a6b2c4164552fa9252a4e803ba
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 9707a1bdcd7d878f95ccb3854b61d6e3faf2e380
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53778387"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54524453"
 ---
 # <a name="imports-statements-must-precede-any-declarations"></a>'Imports' 문은 모든 선언의 앞에 와야 합니다.
 `Imports` 문은 소스 파일 내의 선언문을 따릅니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "53778387"
   
 -   `Imports` 문을 소스 파일의 맨 위, 선언문 앞으로 이동합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Imports 문(.NET 네임스페이스 및 형식)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+## <a name="see-also"></a>참고자료
+- [Imports 문(.NET 네임스페이스 및 형식)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
