--- a/docs/visual-basic/misc/bc30582.md
+++ b/docs/visual-basic/misc/bc30582.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30582
 ms.assetid: 953aecf2-629a-4272-94bd-abf88f785e63
-ms.openlocfilehash: 28ff45bb9aa588d71d56dde8c033f7ba4e0b66e7
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e605914136fcb5097bdd7a96a6d35ce358181cd7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758058"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54524594"
 ---
 # <a name="synclock-operand-cannot-be-of-type-lttypenamegt-because-lttypenamegt-is-not-a-reference-type"></a>'SyncLock' 피연산자는 형식일 수 없습니다 '&lt;typename&gt;'하므로'&lt;typename&gt;' 참조 형식이 아닙니다
 `SyncLock` 문을 사용하면 여러 스레드가 동시에 동일한 문을 실행하지 않도록 하여 단일 식에서 문을 동기화할 수 있습니다. `SyncLock` 문에서 식의 형식은 클래스, 모듈, 인터페이스, 배열 또는 대리자와 같은 참조 형식이어야 합니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53758058"
   
 -   형식을 적절한 참조 형식으로 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [SyncLock 문](../../visual-basic/language-reference/statements/synclock-statement.md)  
- 
+## <a name="see-also"></a>참고자료
+- [SyncLock 문](../../visual-basic/language-reference/statements/synclock-statement.md)
+
