--- a/docs/visual-basic/misc/bc42106.md
+++ b/docs/visual-basic/misc/bc42106.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42106
 ms.assetid: 175b2bc9-5233-462d-97de-9d97b003cc46
-ms.openlocfilehash: 1b00eda5f828bbb29e897b5f74372667137aa9bc
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ffe6c36d64628402d6252f35dbc4725baa50c02d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781140"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54516475"
 ---
 # <a name="operator-ltoperatorsymbolgt-doesnt-return-a-value-on-all-code-paths"></a>연산자 '&lt;operatorsymbol&gt;' 일부 코드 경로의 값을 반환 하지 않습니다
 연산자 '\<operatorsymbol >' 일부 코드 경로의 값을 반환 하지 않습니다. 이 결과를 사용하면 런타임에 null 참조 예외가 발생할 수 있습니다.  
@@ -31,6 +31,6 @@ ms.locfileid: "53781140"
   
 -   제어 흐름 논리를 검사하고 모든 가능한 경로가 `Return` 문으로 끝나는지 확인합니다. 특히, `End Operator` 앞의 마지막 문이 `Return` 문이어야 합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
