--- a/docs/visual-basic/misc/bc30396.md
+++ b/docs/visual-basic/misc/bc30396.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30396
 ms.assetid: aea77b54-c237-4f04-854b-c282ef07c0c0
-ms.openlocfilehash: c09691780e0cba7f1655414ce9251ae600b25a54
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 952a538b6480a26d57aa4e19a63464af6d826c6e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53760564"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54524496"
 ---
-# <a name="ltspecifiergt-is-not-valid-on-an-enum-declaration"></a><span data-ttu-id="d1c77-102">'&lt;지정자&gt;' 열거형 선언에서 유효 하지 않은</span><span class="sxs-lookup"><span data-stu-id="d1c77-102">'&lt;specifier&gt;' is not valid on an Enum declaration</span></span>
-<span data-ttu-id="d1c77-103">`Enum` 선언에서 유효하지 않은 지정자를 사용했습니다.</span><span class="sxs-lookup"><span data-stu-id="d1c77-103">You have used a specifier that is not valid on an `Enum` declaration.</span></span>  
+# <a name="ltspecifiergt-is-not-valid-on-an-enum-declaration"></a><span data-ttu-id="59c3d-102">'&lt;지정자&gt;' 열거형 선언에서 유효 하지 않은</span><span class="sxs-lookup"><span data-stu-id="59c3d-102">'&lt;specifier&gt;' is not valid on an Enum declaration</span></span>
+<span data-ttu-id="59c3d-103">`Enum` 선언에서 유효하지 않은 지정자를 사용했습니다.</span><span class="sxs-lookup"><span data-stu-id="59c3d-103">You have used a specifier that is not valid on an `Enum` declaration.</span></span>  
   
- <span data-ttu-id="d1c77-104">**오류 ID:** BC30396</span><span class="sxs-lookup"><span data-stu-id="d1c77-104">**Error ID:** BC30396</span></span>  
+ <span data-ttu-id="59c3d-104">**오류 ID:** BC30396</span><span class="sxs-lookup"><span data-stu-id="59c3d-104">**Error ID:** BC30396</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d1c77-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d1c77-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="59c3d-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="59c3d-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="d1c77-106">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="d1c77-106">Remove the specifier.</span></span>  
+1.  <span data-ttu-id="59c3d-106">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="59c3d-106">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d1c77-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d1c77-107">See Also</span></span>  
- [<span data-ttu-id="d1c77-108">열거형 개요</span><span class="sxs-lookup"><span data-stu-id="d1c77-108">Enumerations Overview</span></span>](../../visual-basic/programming-guide/language-features/constants-enums/enumerations-overview.md)
+## <a name="see-also"></a><span data-ttu-id="59c3d-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="59c3d-107">See also</span></span>
+- [<span data-ttu-id="59c3d-108">열거형 개요</span><span class="sxs-lookup"><span data-stu-id="59c3d-108">Enumerations Overview</span></span>](../../visual-basic/programming-guide/language-features/constants-enums/enumerations-overview.md)
