commit translated contents

--- a/docs/visual-basic/misc/bc30702.md
+++ b/docs/visual-basic/misc/bc30702.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30702
 ms.assetid: c81a2d76-7065-437e-8fc8-84e8ad01c7c6
-ms.openlocfilehash: 043bcccbae1480543629ca97ea6d19f4570fc9c5
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4e794fec04e4e9dc1c7717f3efbb2636cad9bb4c
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53772056"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54584011"
 ---
 # <a name="index-ltindexnumbergt-for-dimension-ltdimensionnumbergt-is-out-of-range"></a>인덱스 '&lt;indexnumber&gt;'' 차원에 대 한&lt;벗어났습니다&gt;' 범위를 벗어났습니다
 인덱스 중 하나가 정의된 범위를 초과했습니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "53772056"
   
 -   광범위한 값을 허용하도록 배열을 다시 정의합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [배열 (C++)](../../visual-basic/programming-guide/language-features/arrays/index.md)
+## <a name="see-also"></a>참고자료
+- [배열(C++)](../../visual-basic/programming-guide/language-features/arrays/index.md)
