--- a/docs/visual-basic/misc/bc30128.md
+++ b/docs/visual-basic/misc/bc30128.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30128
 ms.assetid: 7a9a0b31-cdf4-45da-9d45-b9ef5cdbcbae
-ms.openlocfilehash: 39a8879840cda86d6e2e3f1a03c095c01514627a
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: f1ab8d6dd26109ab9d97bca77be4d7dd37068be6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53779791"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54588706"
 ---
 # <a name="security-attribute-ltattributenamegt-is-not-valid-lterrorgt"></a>보안 특성 '&lt;attributename&gt;' 올바르지 않습니다: &lt;오류&gt;
 공용 언어 런타임은 보안 컨텍스트에서 특성을 사용할 수 없습니다.
@@ -25,6 +25,6 @@ ms.locfileid: "53779791"
 
 2. 따옴표 붙은 오류 메시지를 검사하고 적절한 조치를 수행합니다.
 
-## <a name="see-also"></a>참고 항목
- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)  
- <xref:System.AttributeUsageAttribute?displayProperty=nameWithType>
+## <a name="see-also"></a>참고자료
+- [특성 개요](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- <xref:System.AttributeUsageAttribute?displayProperty=nameWithType>
