--- a/docs/visual-basic/misc/bc30305.md
+++ b/docs/visual-basic/misc/bc30305.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30305
 ms.assetid: f07f925e-9f95-4885-bdba-eaba2d0483d8
-ms.openlocfilehash: 19ff5815f7fc28c3a73ba8098f399ea7bcdc0607
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: b22c28e796fb60a34379e16a3695e5bdbb1dbe77
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780129"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54588953"
 ---
 # <a name="ltmethod1gt-and-ltmethod2gt-cannot-overload-each-other-because-they-differ-only-by-the-default-values-of-optional-parameters"></a>'&lt;method1&gt;'및'&lt;method2&gt;'은 선택적 매개 변수의 기본값만 다르므로 서로 오버 로드할 수 없습니다.
 선택적 매개 변수에서만 첫 번째 메서드와 차이가 나는 다른 메서드를 사용하여 메서드를 오버로드하려고 했습니다. 선택적 매개 변수가 있는 메서드는 두 개의 오버로드된 메서드와 같다고 할 수 있는데 하나는 선택적 매개 변수를 사용하는 메서드이고 다른 하나는 사용하지 않는 메서드입니다. 그러므로 이중 하나에 해당하는 인수 목록을 사용하여 메서드를 오버로드할 수 없습니다.  
@@ -23,6 +23,6 @@ ms.locfileid: "53780129"
   
 -   선택적 매개 변수 이외에 메서드에 다른 차별점이 있는지 확인합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [프로시저 오버로딩](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)  
- [프로시저를 오버로드할 때 고려해야 할 사항](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+## <a name="see-also"></a>참고자료
+- [프로시저 오버로딩](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
+- [프로시저를 오버로드할 때 고려해야 할 사항](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
