--- a/docs/visual-basic/misc/bc30436.md
+++ b/docs/visual-basic/misc/bc30436.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30436
 ms.assetid: c0560864-64f6-4c76-803f-d9c51df89d62
-ms.openlocfilehash: 6f5ba3c8ed40092c6cbcfc84e3d169d206fc738f
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: e60bbe79472d4b68a988bc47b1e7520cd6c49fb1
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53776697"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54589943"
 ---
 # <a name="members-in-a-module-cannot-be-declared-ltspecifiergt"></a>모듈의 멤버를 선언할 수 없습니다. '&lt;지정자&gt;'
 `Module` 문 내에서 멤버에 유효하지 않은 지정자를 사용했습니다. 모듈은 인스턴스화될 수 없고 상속을 지원하지 않으며 인터페이스를 구현할 수 없습니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "53776697"
   
 -   지정자를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a>참고자료
+- [Module 문](../../visual-basic/language-reference/statements/module-statement.md)
