--- a/docs/visual-basic/misc/bc36626.md
+++ b/docs/visual-basic/misc/bc36626.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC36626
 ms.assetid: d8695228-85c7-432a-9979-0d9898035710
-ms.openlocfilehash: 5854f6829522e29629e83375392afdfddf8bbbaa
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 74e5f22417792c28c65983da6dcba916ec2b080e
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775540"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54584089"
 ---
 # <a name="lambda-expression-cannot-be-converted-to-lttypenamegt-because-type-lttypenamegt-is-declared-mustinherit-and-cannot-be-created"></a>람다 식을 변환할 수 없는 '&lt;typename&gt;' 때문에 형식 '&lt;typename&gt;' 'm'으로 선언 되어 및 만들 수 없습니다
 문에서 기본 클래스로만 사용할 수 있고 인스턴스를 만드는 데 사용할 수 없는 형식으로 람다 식을 변환하려고 합니다.  
   
  **오류 ID:** BC36626  
   
-## <a name="see-also"></a>참고 항목  
- [람다 식](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)  
- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)  
- [상속 기본 사항 (Visual Basic)](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+## <a name="see-also"></a>참고자료
+- [람다 식](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [MustInherit](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [상속 기본 사항(Visual Basic)](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
