commit bilingual contents

--- a/docs/visual-basic/misc/bc30935.md
+++ b/docs/visual-basic/misc/bc30935.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC30935
 ms.assetid: 1165b630-668d-417d-9e18-9b8ffe7f6980
-ms.openlocfilehash: c895583bae010a5137e99ac59f0d9d19c7c2aabb
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a078f2e59120eb21395345058aab506918c2d505
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770562"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54632758"
 ---
-# <a name="member-ltclassnamegtltprocedurenamegt-that-matches-this-signature-cannot-be-overridden-because-the-class-ltclassnamegt-contains-multiple-members-with-this-same-name-and-signature-ltsignaturelistgt"></a><span data-ttu-id="c2834-102">멤버 '&lt;classname&gt;.&lt; procedurename&gt;' 때문에이 시그니처를 재정의할 수 없는 일치 하는 클래스의&lt;classname&gt;' 이름과 서명이 같은 여러 멤버가 포함 되어: &lt;signaturelist&gt;</span><span class="sxs-lookup"><span data-stu-id="c2834-102">Member '&lt;classname&gt;.&lt;procedurename&gt;' that matches this signature cannot be overridden because the class '&lt;classname&gt;' contains multiple members with this same name and signature: &lt;signaturelist&gt;</span></span>
-<span data-ttu-id="c2834-103">프로시저 또는 속성이 상속된 프로시저 또는 속성을 재정의하려고 하지만, 컴파일러가 이름과 서명이 같은 기본 프로시저 또는 속성 버전을 둘 이상 찾았습니다.</span><span class="sxs-lookup"><span data-stu-id="c2834-103">A procedure or property attempts to override an inherited procedure or property, but the compiler finds more than one version of the base procedure or property with the same name and signature.</span></span>  
+# <a name="member-ltclassnamegtltprocedurenamegt-that-matches-this-signature-cannot-be-overridden-because-the-class-ltclassnamegt-contains-multiple-members-with-this-same-name-and-signature-ltsignaturelistgt"></a><span data-ttu-id="aaef6-102">멤버 '&lt;classname&gt;.&lt; procedurename&gt;' 때문에이 시그니처를 재정의할 수 없는 일치 하는 클래스의&lt;classname&gt;' 이름과 서명이 같은 여러 멤버가 포함 되어: &lt;signaturelist&gt;</span><span class="sxs-lookup"><span data-stu-id="aaef6-102">Member '&lt;classname&gt;.&lt;procedurename&gt;' that matches this signature cannot be overridden because the class '&lt;classname&gt;' contains multiple members with this same name and signature: &lt;signaturelist&gt;</span></span>
+<span data-ttu-id="aaef6-103">프로시저 또는 속성이 상속된 프로시저 또는 속성을 재정의하려고 하지만, 컴파일러가 이름과 서명이 같은 기본 프로시저 또는 속성 버전을 둘 이상 찾았습니다.</span><span class="sxs-lookup"><span data-stu-id="aaef6-103">A procedure or property attempts to override an inherited procedure or property, but the compiler finds more than one version of the base procedure or property with the same name and signature.</span></span>  
   
- <span data-ttu-id="c2834-104">다음 기본 선언이 보여 주는 것처럼 이 오류는 생성된 제네릭 형식이 있는 경우에 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="c2834-104">This error can occur in a situation with constructed generic types, as the following skeleton declarations illustrate.</span></span>  
+ <span data-ttu-id="aaef6-104">다음 기본 선언이 보여 주는 것처럼 이 오류는 생성된 제네릭 형식이 있는 경우에 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="aaef6-104">This error can occur in a situation with constructed generic types, as the following skeleton declarations illustrate.</span></span>  
   
 ```  
 Public Class baseClass(Of t)  
@@ -33,19 +33,19 @@ Public Class derivedClass
 End Class  
 ```  
   
- <span data-ttu-id="c2834-105">`derivedClass` 는 해당 형식 매개 변수 `baseClass` 에 `String` 을 제공하는 `t`를 상속하기 때문에 `doSomething` 에 관한 한 `baseClass` 에 있는 두 버전의 `derivedClass` 은 동일한 서명을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="c2834-105">Because `derivedClass` inherits `baseClass` supplying `String` to its type parameter `t`, the two versions of `doSomething` in `baseClass` take on identical signatures as far as `derivedClass` is concerned.</span></span> <span data-ttu-id="c2834-106">결과적으로 컴파일러가 어떤 버전을 재정의할지 확인할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="c2834-106">As a result, the compiler cannot determine which version to override.</span></span>  
+ <span data-ttu-id="aaef6-105">`derivedClass` 는 해당 형식 매개 변수 `baseClass` 에 `String` 을 제공하는 `t`를 상속하기 때문에 `doSomething` 에 관한 한 `baseClass` 에 있는 두 버전의 `derivedClass` 은 동일한 서명을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="aaef6-105">Because `derivedClass` inherits `baseClass` supplying `String` to its type parameter `t`, the two versions of `doSomething` in `baseClass` take on identical signatures as far as `derivedClass` is concerned.</span></span> <span data-ttu-id="aaef6-106">결과적으로 컴파일러가 어떤 버전을 재정의할지 확인할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="aaef6-106">As a result, the compiler cannot determine which version to override.</span></span>  
   
- <span data-ttu-id="c2834-107">**오류 ID:** BC30935</span><span class="sxs-lookup"><span data-stu-id="c2834-107">**Error ID:** BC30935</span></span>  
+ <span data-ttu-id="aaef6-107">**오류 ID:** BC30935</span><span class="sxs-lookup"><span data-stu-id="aaef6-107">**Error ID:** BC30935</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c2834-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c2834-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="aaef6-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="aaef6-108">To correct this error</span></span>  
   
--   <span data-ttu-id="c2834-109">동일한 서명을 가진 멤버 프로시저 또는 속성이 하나 이상 발생하지 않도록 기본 클래스에 제공하는 형식 인수를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="c2834-109">Change the type argument or arguments you supply to the base class so that it does not result in one or more identical signatures of member procedures or properties.</span></span>  
+-   <span data-ttu-id="aaef6-109">동일한 서명을 가진 멤버 프로시저 또는 속성이 하나 이상 발생하지 않도록 기본 클래스에 제공하는 형식 인수를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="aaef6-109">Change the type argument or arguments you supply to the base class so that it does not result in one or more identical signatures of member procedures or properties.</span></span>  
   
-     <span data-ttu-id="c2834-110">또는</span><span class="sxs-lookup"><span data-stu-id="c2834-110">-or-</span></span>  
+     <span data-ttu-id="aaef6-110">또는</span><span class="sxs-lookup"><span data-stu-id="aaef6-110">-or-</span></span>  
   
--   <span data-ttu-id="c2834-111">사용하는 형식 인수 집합이 포함된 기본 클래스를 상속해야 하는 경우 이 오류 메시지에 언급된 프로시저 또는 속성을 재정의하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="c2834-111">If you need to inherit the base class with the set of type arguments you are using, then do not override the procedure or property cited in this error message.</span></span>  
+-   <span data-ttu-id="aaef6-111">사용하는 형식 인수 집합이 포함된 기본 클래스를 상속해야 하는 경우 이 오류 메시지에 언급된 프로시저 또는 속성을 재정의하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="aaef6-111">If you need to inherit the base class with the set of type arguments you are using, then do not override the procedure or property cited in this error message.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c2834-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="c2834-112">See Also</span></span>  
- [<span data-ttu-id="c2834-113">재정의 가능</span><span class="sxs-lookup"><span data-stu-id="c2834-113">Overridable</span></span>](../../visual-basic/language-reference/modifiers/overridable.md)  
- [<span data-ttu-id="c2834-114">재정의</span><span class="sxs-lookup"><span data-stu-id="c2834-114">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)  
- [<span data-ttu-id="c2834-115">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="c2834-115">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a><span data-ttu-id="aaef6-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="aaef6-112">See also</span></span>
+- [<span data-ttu-id="aaef6-113">재정의 가능</span><span class="sxs-lookup"><span data-stu-id="aaef6-113">Overridable</span></span>](../../visual-basic/language-reference/modifiers/overridable.md)
+- [<span data-ttu-id="aaef6-114">재정의</span><span class="sxs-lookup"><span data-stu-id="aaef6-114">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="aaef6-115">속성 및 파생된 클래스에서 메서드 재정의</span><span class="sxs-lookup"><span data-stu-id="aaef6-115">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
