--- a/docs/visual-basic/misc/bc40054.md
+++ b/docs/visual-basic/misc/bc40054.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC40054
 ms.assetid: beac93b0-d427-4df6-9582-fd69c7a53673
-ms.openlocfilehash: ff7f287862d630312394244d2baaf642bce1e678
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8058b3c7c7cde07d291961b598f6a5e8e4040efa
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761825"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634053"
 ---
-# <a name="ltconstructorgt-in-designer-generated-type-lttypegt-should-call-initializecomponent-method"></a><span data-ttu-id="b7d02-102">'&lt;생성자&gt;'에 디자이너에서 생성 된 형식'&lt;형식&gt;' InitializeComponent 메서드를 호출 해야</span><span class="sxs-lookup"><span data-stu-id="b7d02-102">'&lt;constructor&gt;' in designer-generated type '&lt;type&gt;' should call InitializeComponent method</span></span>
-<span data-ttu-id="b7d02-103">디자이너에서 생성한 형식의 생성자가 해당 형식의 `InitializeComponent` 메서드를 호출하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="b7d02-103">A constructor in a designer-generated type does not call the type's `InitializeComponent` method.</span></span>  
+# <a name="ltconstructorgt-in-designer-generated-type-lttypegt-should-call-initializecomponent-method"></a><span data-ttu-id="96afe-102">'&lt;생성자&gt;'에 디자이너에서 생성 된 형식'&lt;형식&gt;' InitializeComponent 메서드를 호출 해야</span><span class="sxs-lookup"><span data-stu-id="96afe-102">'&lt;constructor&gt;' in designer-generated type '&lt;type&gt;' should call InitializeComponent method</span></span>
+<span data-ttu-id="96afe-103">디자이너에서 생성한 형식의 생성자가 해당 형식의 `InitializeComponent` 메서드를 호출하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="96afe-103">A constructor in a designer-generated type does not call the type's `InitializeComponent` method.</span></span>  
   
- <span data-ttu-id="b7d02-104">디자이너에서 생성한 형식의 각 생성자는 해당 형식의 `InitializeComponent` 메서드를 호출해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="b7d02-104">Each constructor in a designer-generated type should call the type's `InitializeComponent` method.</span></span>  
+ <span data-ttu-id="96afe-104">디자이너에서 생성한 형식의 각 생성자는 해당 형식의 `InitializeComponent` 메서드를 호출해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="96afe-104">Each constructor in a designer-generated type should call the type's `InitializeComponent` method.</span></span>  
   
- <span data-ttu-id="b7d02-105">**오류 ID:** BC40054</span><span class="sxs-lookup"><span data-stu-id="b7d02-105">**Error ID:** BC40054</span></span>  
+ <span data-ttu-id="96afe-105">**오류 ID:** BC40054</span><span class="sxs-lookup"><span data-stu-id="96afe-105">**Error ID:** BC40054</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b7d02-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b7d02-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="96afe-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="96afe-106">To correct this error</span></span>  
   
--   <span data-ttu-id="b7d02-107">생성자에서 `InitializeComponent` 메서드에 호출을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="b7d02-107">Add a call to the `InitializeComponent` method in the constructor.</span></span>  
+-   <span data-ttu-id="96afe-107">생성자에서 `InitializeComponent` 메서드에 호출을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="96afe-107">Add a call to the `InitializeComponent` method in the constructor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b7d02-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b7d02-108">See Also</span></span>  
- <xref:Microsoft.VisualBasic.CompilerServices.DesignerGeneratedAttribute>  
- [<span data-ttu-id="b7d02-109">생성자(C++)</span><span class="sxs-lookup"><span data-stu-id="b7d02-109">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a><span data-ttu-id="96afe-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="96afe-108">See also</span></span>
+- <xref:Microsoft.VisualBasic.CompilerServices.DesignerGeneratedAttribute>
+- [<span data-ttu-id="96afe-109">생성자</span><span class="sxs-lookup"><span data-stu-id="96afe-109">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
