--- a/docs/visual-basic/misc/bc30610.md
+++ b/docs/visual-basic/misc/bc30610.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30610
 ms.assetid: 7fba7a3b-c918-44ba-ae85-20312615c1ce
-ms.openlocfilehash: c7a1546ba629c7210b8b496a86ad37200f15c137
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 278904910d2f66a33902f9444c366b1a0ce9ec3f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53779375"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54634625"
 ---
-# <a name="class-ltclassnamegt-must-either-be-declared-mustinherit-or-override-the-following-inherited-mustoverride-members-ltmembernamesgt"></a><span data-ttu-id="39559-102">클래스&lt;classname&gt;' 중 하나를 선언 해야 합니다 'MustInherit' 또는 상속 된 'MustOverride' 멤버인 재정의: &lt;membername(s)&gt;</span><span class="sxs-lookup"><span data-stu-id="39559-102">Class '&lt;classname&gt;' must either be declared 'MustInherit' or override the following inherited 'MustOverride' member(s): &lt;membername(s)&gt;</span></span>
-<span data-ttu-id="39559-103">`MustOverride` 멤버를 포함하는 기본 클래스에서 파생된 클래스는 이러한 멤버를 재정의하거나 `MustInherit` 한정자를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="39559-103">Classes derived from base classes that contain `MustOverride` members must either override such members or use the `MustInherit` modifier.</span></span>  
+# <a name="class-ltclassnamegt-must-either-be-declared-mustinherit-or-override-the-following-inherited-mustoverride-members-ltmembernamesgt"></a><span data-ttu-id="67913-102">클래스&lt;classname&gt;' 중 하나를 선언 해야 합니다 'MustInherit' 또는 상속 된 'MustOverride' 멤버인 재정의: &lt;membername(s)&gt;</span><span class="sxs-lookup"><span data-stu-id="67913-102">Class '&lt;classname&gt;' must either be declared 'MustInherit' or override the following inherited 'MustOverride' member(s): &lt;membername(s)&gt;</span></span>
+<span data-ttu-id="67913-103">`MustOverride` 멤버를 포함하는 기본 클래스에서 파생된 클래스는 이러한 멤버를 재정의하거나 `MustInherit` 한정자를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="67913-103">Classes derived from base classes that contain `MustOverride` members must either override such members or use the `MustInherit` modifier.</span></span>  
   
- <span data-ttu-id="39559-104">**오류 ID:** BC30610</span><span class="sxs-lookup"><span data-stu-id="39559-104">**Error ID:** BC30610</span></span>  
+ <span data-ttu-id="67913-104">**오류 ID:** BC30610</span><span class="sxs-lookup"><span data-stu-id="67913-104">**Error ID:** BC30610</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="39559-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="39559-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="67913-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="67913-105">To correct this error</span></span>  
   
--   <span data-ttu-id="39559-106">클래스 정의에 `MustInherit` 한정자를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="39559-106">Add the `MustInherit` modifier to the class definition.</span></span>  
+-   <span data-ttu-id="67913-106">클래스 정의에 `MustInherit` 한정자를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="67913-106">Add the `MustInherit` modifier to the class definition.</span></span>  
   
--   <span data-ttu-id="39559-107">`Overrides` 키워드를 사용하여 재정의를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="39559-107">Declare an override using the `Overrides` keyword.</span></span>  
+-   <span data-ttu-id="67913-107">`Overrides` 키워드를 사용하여 재정의를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="67913-107">Declare an override using the `Overrides` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="39559-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="39559-108">See Also</span></span>  
- [<span data-ttu-id="39559-109">재정의</span><span class="sxs-lookup"><span data-stu-id="39559-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)  
- [<span data-ttu-id="39559-110">MustInherit</span><span class="sxs-lookup"><span data-stu-id="39559-110">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)  
- [<span data-ttu-id="39559-111">상속 기본 사항 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="39559-111">Inheritance basics (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+## <a name="see-also"></a><span data-ttu-id="67913-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="67913-108">See also</span></span>
+- [<span data-ttu-id="67913-109">재정의</span><span class="sxs-lookup"><span data-stu-id="67913-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="67913-110">MustInherit</span><span class="sxs-lookup"><span data-stu-id="67913-110">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="67913-111">상속 기본 사항(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="67913-111">Inheritance basics (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
