--- a/docs/visual-basic/misc/bc31196.md
+++ b/docs/visual-basic/misc/bc31196.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31196
 ms.assetid: 36be5c92-dd6b-41d4-894a-2bd71d772092
-ms.openlocfilehash: f5a9fc4d7ec9b4ee67f758ff1572778d87c24ee1
-ms.sourcegitcommit: a885cc8c3e444ca6471348893d5373c6e9e49a47
+ms.openlocfilehash: b2274324b960b33f9dd7ace4d3d9f0599f79f330
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "44041644"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54631453"
 ---
-# <a name="xml-literals-and-xml-axis-properties-are-not-available-during-this-debugging-session-because-they-are-not-used-in-this-assembly"></a><span data-ttu-id="9acbc-102">XML 리터럴과 XML 축 속성은 이 어셈블리에서 사용되지 않으므로 이 디버깅 세션 중에 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9acbc-102">XML literals and XML axis properties are not available during this debugging session because they are not used in this assembly</span></span>
-<span data-ttu-id="9acbc-103">XML 리터럴 또는 XML 축 속성에서 참조 되었습니다 합니다 **Watch** 또는 **직접 실행** in Visual Basic의 XML 기능 사용할 수 없는 디버깅 세션 중 창입니다.</span><span class="sxs-lookup"><span data-stu-id="9acbc-103">An XML literal or XML axis property has been referenced in the **Watch** or **Immediate** window during a debugging session in which XML in Visual Basic features are not available.</span></span> <span data-ttu-id="9acbc-104">이 경우 Visual Basic 기능에는 XML을 사용 하지 않습니다 또는 릴리스 빌드를 수행 하는 어셈블리에 대 한 합니다.</span><span class="sxs-lookup"><span data-stu-id="9acbc-104">This is the case for an assembly that either does not use the XML in Visual Basic features or is a release build.</span></span>  
+# <a name="xml-literals-and-xml-axis-properties-are-not-available-during-this-debugging-session-because-they-are-not-used-in-this-assembly"></a><span data-ttu-id="27b2e-102">XML 리터럴과 XML 축 속성은 이 어셈블리에서 사용되지 않으므로 이 디버깅 세션 중에 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="27b2e-102">XML literals and XML axis properties are not available during this debugging session because they are not used in this assembly</span></span>
+<span data-ttu-id="27b2e-103">XML 리터럴 또는 XML 축 속성에서 참조 되었습니다 합니다 **Watch** 또는 **직접 실행** in Visual Basic의 XML 기능 사용할 수 없는 디버깅 세션 중 창입니다.</span><span class="sxs-lookup"><span data-stu-id="27b2e-103">An XML literal or XML axis property has been referenced in the **Watch** or **Immediate** window during a debugging session in which XML in Visual Basic features are not available.</span></span> <span data-ttu-id="27b2e-104">이 경우 Visual Basic 기능에는 XML을 사용 하지 않습니다 또는 릴리스 빌드를 수행 하는 어셈블리에 대 한 합니다.</span><span class="sxs-lookup"><span data-stu-id="27b2e-104">This is the case for an assembly that either does not use the XML in Visual Basic features or is a release build.</span></span>  
   
- <span data-ttu-id="9acbc-105">**오류 ID:** BC31196</span><span class="sxs-lookup"><span data-stu-id="9acbc-105">**Error ID:** BC31196</span></span>  
+ <span data-ttu-id="27b2e-105">**오류 ID:** BC31196</span><span class="sxs-lookup"><span data-stu-id="27b2e-105">**Error ID:** BC31196</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9acbc-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9acbc-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="27b2e-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="27b2e-106">To correct this error</span></span>  
   
--   <span data-ttu-id="9acbc-107">어셈블리의 디버그 빌드를 사용하여 새 디버깅 세션을 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="9acbc-107">Start a new debugging session using the debug build of the assembly.</span></span>  
+-   <span data-ttu-id="27b2e-107">어셈블리의 디버그 빌드를 사용하여 새 디버깅 세션을 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="27b2e-107">Start a new debugging session using the debug build of the assembly.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9acbc-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9acbc-108">See Also</span></span>  
- [<span data-ttu-id="9acbc-109">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="9acbc-109">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)  
- [<span data-ttu-id="9acbc-110">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="9acbc-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="9acbc-111">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="9acbc-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)  
- [<span data-ttu-id="9acbc-112">XML</span><span class="sxs-lookup"><span data-stu-id="9acbc-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="27b2e-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="27b2e-108">See also</span></span>
+- [<span data-ttu-id="27b2e-109">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="27b2e-109">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
+- [<span data-ttu-id="27b2e-110">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="27b2e-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
+- [<span data-ttu-id="27b2e-111">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="27b2e-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)
+- [<span data-ttu-id="27b2e-112">XML</span><span class="sxs-lookup"><span data-stu-id="27b2e-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
