--- a/docs/visual-basic/misc/bc31411.md
+++ b/docs/visual-basic/misc/bc31411.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31411
 ms.assetid: 5a9f4c57-a4b8-45f5-8273-b7caa689a170
-ms.openlocfilehash: 02fd18725c26331fa84edc2a781baf0321e3e6c1
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a47bc9d96ba7e1f61ebde68fd08149128e36866f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53766882"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54633546"
 ---
-# <a name="lttypenamegt-must-be-declared-mustinherit-because-it-contains-methods-declared-mustoverride"></a><span data-ttu-id="eb9ff-102">'&lt;typename&gt;' 선언 'MustOverride' 메서드를 포함 하므로 'MustInherit' 선언 해야 합니다</span><span class="sxs-lookup"><span data-stu-id="eb9ff-102">'&lt;typename&gt;' must be declared 'MustInherit' because it contains methods declared 'MustOverride'</span></span>
-<span data-ttu-id="eb9ff-103">`MustOverride` 멤버를 포함하는 형식이 `MustInherit`로 선언되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="eb9ff-103">Types that contain `MustOverride` members must be declared `MustInherit`.</span></span>  
+# <a name="lttypenamegt-must-be-declared-mustinherit-because-it-contains-methods-declared-mustoverride"></a><span data-ttu-id="881c6-102">'&lt;typename&gt;' 선언 'MustOverride' 메서드를 포함 하므로 'MustInherit' 선언 해야 합니다</span><span class="sxs-lookup"><span data-stu-id="881c6-102">'&lt;typename&gt;' must be declared 'MustInherit' because it contains methods declared 'MustOverride'</span></span>
+<span data-ttu-id="881c6-103">`MustOverride` 멤버를 포함하는 형식이 `MustInherit`로 선언되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="881c6-103">Types that contain `MustOverride` members must be declared `MustInherit`.</span></span>  
   
- <span data-ttu-id="eb9ff-104">**오류 ID:** BC31411</span><span class="sxs-lookup"><span data-stu-id="eb9ff-104">**Error ID:** BC31411</span></span>  
+ <span data-ttu-id="881c6-104">**오류 ID:** BC31411</span><span class="sxs-lookup"><span data-stu-id="881c6-104">**Error ID:** BC31411</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="eb9ff-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="eb9ff-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="881c6-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="881c6-105">To correct this error</span></span>  
   
--   <span data-ttu-id="eb9ff-106">`MustInherit` 한정자를 형식에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="eb9ff-106">Add the `MustInherit` modifier to the type.</span></span>  
+-   <span data-ttu-id="881c6-106">`MustInherit` 한정자를 형식에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="881c6-106">Add the `MustInherit` modifier to the type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="eb9ff-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="eb9ff-107">See Also</span></span>  
- [<span data-ttu-id="eb9ff-108">MustInherit</span><span class="sxs-lookup"><span data-stu-id="eb9ff-108">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)  
- [<span data-ttu-id="eb9ff-109">MustOverride</span><span class="sxs-lookup"><span data-stu-id="eb9ff-109">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
+## <a name="see-also"></a><span data-ttu-id="881c6-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="881c6-107">See also</span></span>
+- [<span data-ttu-id="881c6-108">MustInherit</span><span class="sxs-lookup"><span data-stu-id="881c6-108">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="881c6-109">MustOverride</span><span class="sxs-lookup"><span data-stu-id="881c6-109">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
