--- a/docs/visual-basic/misc/bc32107.md
+++ b/docs/visual-basic/misc/bc32107.md
@@ -7,41 +7,41 @@ f1_keywords:
 helpviewer_keywords:
 - BC32107
 ms.assetid: 218a7f0c-dd4f-4086-a52c-e8d581377e8b
-ms.openlocfilehash: 0c93651aa379fe569e675974886ebb10966277a3
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 49bd566520d7d1c8c78f3e4fe9c6a9aadc0ab0c3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764646"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54629776"
 ---
-# <a name="class-constraint-and-a-specific-class-type-constraint-cannot-be-combined"></a><span data-ttu-id="5d0eb-102">'Class' 제약 조건과 특정 클래스 형식 제약 조건은 함께 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-102">'Class' constraint and a specific class type constraint cannot be combined</span></span>
-<span data-ttu-id="5d0eb-103">제약 조건 목록에는 [클래스(Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) 제약 조건과 정의된 클래스의 이름이 함께 나옵니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-103">A constraint list includes both the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint and the name of a defined class.</span></span>  
+# <a name="class-constraint-and-a-specific-class-type-constraint-cannot-be-combined"></a><span data-ttu-id="ba017-102">'Class' 제약 조건과 특정 클래스 형식 제약 조건은 함께 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-102">'Class' constraint and a specific class type constraint cannot be combined</span></span>
+<span data-ttu-id="ba017-103">제약 조건 목록에는 [클래스(Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) 제약 조건과 정의된 클래스의 이름이 함께 나옵니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-103">A constraint list includes both the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint and the name of a defined class.</span></span>  
   
- <span data-ttu-id="5d0eb-104">제약 조건 목록은 형식 매개 변수에 전달되는 형식 인수에 대해 요구 사항을 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="5d0eb-105">다음 요구 사항을 임의로 조합해서 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-105">You can specify the following requirements in any combination:</span></span>  
+ <span data-ttu-id="ba017-104">제약 조건 목록은 형식 매개 변수에 전달되는 형식 인수에 대해 요구 사항을 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="ba017-105">다음 요구 사항을 임의로 조합해서 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-105">You can specify the following requirements in any combination:</span></span>  
   
--   <span data-ttu-id="5d0eb-106">형식 인수는 하나 이상의 인터페이스를 구현해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-106">The type argument must implement one or more interfaces</span></span>  
+-   <span data-ttu-id="ba017-106">형식 인수는 하나 이상의 인터페이스를 구현해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-106">The type argument must implement one or more interfaces</span></span>  
   
--   <span data-ttu-id="5d0eb-107">형식 인수는 최대 하나의 클래스에서 상속해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-107">The type argument must inherit from at most one class</span></span>  
+-   <span data-ttu-id="ba017-107">형식 인수는 최대 하나의 클래스에서 상속해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-107">The type argument must inherit from at most one class</span></span>  
   
--   <span data-ttu-id="5d0eb-108">형식 인수는 만드는 코드가 액세스할 수 있는, 매개 변수 없는 생성자를 노출해야 합니다( `New` 제약 조건 포함).</span><span class="sxs-lookup"><span data-stu-id="5d0eb-108">The type argument must expose a parameterless constructor that the creating code can access (include the `New` constraint)</span></span>  
+-   <span data-ttu-id="ba017-108">형식 인수는 만드는 코드가 액세스할 수 있는, 매개 변수 없는 생성자를 노출해야 합니다( `New` 제약 조건 포함).</span><span class="sxs-lookup"><span data-stu-id="ba017-108">The type argument must expose a parameterless constructor that the creating code can access (include the `New` constraint)</span></span>  
   
- <span data-ttu-id="5d0eb-109">제약 조건 목록에 특정 클래스 또는 인터페이스가 없는 경우 다음 중 하나를 지정하여 더 많은 일반 요구 사항을 적용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-109">If you do not include any specific class or interface in the constraint list, you can impose a more general requirement by specifying one of the following:</span></span>  
+ <span data-ttu-id="ba017-109">제약 조건 목록에 특정 클래스 또는 인터페이스가 없는 경우 다음 중 하나를 지정하여 더 많은 일반 요구 사항을 적용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-109">If you do not include any specific class or interface in the constraint list, you can impose a more general requirement by specifying one of the following:</span></span>  
   
--   <span data-ttu-id="5d0eb-110">형식 인수는 값 형식이어야 합니다( `Structure` 제약 조건 포함).</span><span class="sxs-lookup"><span data-stu-id="5d0eb-110">The type argument must be a value type (include the `Structure` constraint)</span></span>  
+-   <span data-ttu-id="ba017-110">형식 인수는 값 형식이어야 합니다( `Structure` 제약 조건 포함).</span><span class="sxs-lookup"><span data-stu-id="ba017-110">The type argument must be a value type (include the `Structure` constraint)</span></span>  
   
--   <span data-ttu-id="5d0eb-111">형식 인수는 참조 형식이어야 합니다( `Class` 제약 조건 포함).</span><span class="sxs-lookup"><span data-stu-id="5d0eb-111">The type argument must be a reference type (include the `Class` constraint)</span></span>  
+-   <span data-ttu-id="ba017-111">형식 인수는 참조 형식이어야 합니다( `Class` 제약 조건 포함).</span><span class="sxs-lookup"><span data-stu-id="ba017-111">The type argument must be a reference type (include the `Class` constraint)</span></span>  
   
- <span data-ttu-id="5d0eb-112">동일한 형식 매개 변수에 `Structure` 와 `Class` 를 둘 다 지정할 수 없으며 두 번 이상 지정할 수도 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-112">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="ba017-112">동일한 형식 매개 변수에 `Structure` 와 `Class` 를 둘 다 지정할 수 없으며 두 번 이상 지정할 수도 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-112">You cannot specify both `Structure` and `Class` for the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="5d0eb-113">**오류 ID:** BC32107</span><span class="sxs-lookup"><span data-stu-id="5d0eb-113">**Error ID:** BC32107</span></span>  
+ <span data-ttu-id="ba017-113">**오류 ID:** BC32107</span><span class="sxs-lookup"><span data-stu-id="ba017-113">**Error ID:** BC32107</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5d0eb-114">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5d0eb-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ba017-114">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ba017-114">To correct this error</span></span>  
   
--   <span data-ttu-id="5d0eb-115">형식 인수를 참조 형식으로 허용하려면 제약 조건 목록에서 클래스 이름을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-115">If you want to allow the type argument to be any reference type, remove the class name from the constraint list.</span></span>  
+-   <span data-ttu-id="ba017-115">형식 인수를 참조 형식으로 허용하려면 제약 조건 목록에서 클래스 이름을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-115">If you want to allow the type argument to be any reference type, remove the class name from the constraint list.</span></span>  
   
--   <span data-ttu-id="5d0eb-116">형식 인수를 지정된 클래스 이름에서 상속하려는 경우에는 제약 조건 목록에서 `Class` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="5d0eb-116">If you want the type argument to inherit from the specified class name, remove the `Class` keyword from the constraint list.</span></span>  
+-   <span data-ttu-id="ba017-116">형식 인수를 지정된 클래스 이름에서 상속하려는 경우에는 제약 조건 목록에서 `Class` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ba017-116">If you want the type argument to inherit from the specified class name, remove the `Class` keyword from the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5d0eb-117">참고 항목</span><span class="sxs-lookup"><span data-stu-id="5d0eb-117">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ba017-117">참고자료</span><span class="sxs-lookup"><span data-stu-id="ba017-117">See also</span></span>
 
-- [<span data-ttu-id="5d0eb-118">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5d0eb-118">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="5d0eb-119">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="5d0eb-119">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="ba017-118">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="ba017-118">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="ba017-119">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="ba017-119">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
