commit bilingual contents

--- a/docs/visual-basic/misc/bc31127.md
+++ b/docs/visual-basic/misc/bc31127.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31127
 ms.assetid: 70ecd206-449e-4ae0-bf6a-980c40d8d847
-ms.openlocfilehash: 5969cc7999b75b7c3c7617a23200de5fc86267df
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 62cc4a78d1f329cde1425e3bc8e0a81d96916358
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767181"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54545928"
 ---
-# <a name="addhandler-is-already-declared"></a><span data-ttu-id="27d9a-102">'AddHandler'가 이미 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="27d9a-102">'AddHandler' is already declared</span></span>
-<span data-ttu-id="27d9a-103">둘 이상의 `AddHandler` 선언이 사용자 지정 이벤트 선언에 표시되었습니다.</span><span class="sxs-lookup"><span data-stu-id="27d9a-103">More than one `AddHandler` declaration appears in a custom event declaration.</span></span> <span data-ttu-id="27d9a-104">`AddHandler` 선언은 이벤트 처리기를 추가하는 데 사용되는 프로시저를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="27d9a-104">An `AddHandler` declaration declares procedure used to add an event handler.</span></span>  
+# <a name="addhandler-is-already-declared"></a><span data-ttu-id="b58d2-102">'AddHandler'가 이미 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b58d2-102">'AddHandler' is already declared</span></span>
+<span data-ttu-id="b58d2-103">둘 이상의 `AddHandler` 선언이 사용자 지정 이벤트 선언에 표시되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b58d2-103">More than one `AddHandler` declaration appears in a custom event declaration.</span></span> <span data-ttu-id="b58d2-104">`AddHandler` 선언은 이벤트 처리기를 추가하는 데 사용되는 프로시저를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="b58d2-104">An `AddHandler` declaration declares procedure used to add an event handler.</span></span>  
   
- <span data-ttu-id="27d9a-105">**오류 ID:** BC31127</span><span class="sxs-lookup"><span data-stu-id="27d9a-105">**Error ID:** BC31127</span></span>  
+ <span data-ttu-id="b58d2-105">**오류 ID:** BC31127</span><span class="sxs-lookup"><span data-stu-id="b58d2-105">**Error ID:** BC31127</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="27d9a-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="27d9a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b58d2-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b58d2-106">To correct this error</span></span>  
   
--   <span data-ttu-id="27d9a-107">중복 `AddHandler` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="27d9a-107">Remove the redundant `AddHandler` statement.</span></span>  
+-   <span data-ttu-id="b58d2-107">중복 `AddHandler` 문을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="b58d2-107">Remove the redundant `AddHandler` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="27d9a-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="27d9a-108">See Also</span></span>  
- [<span data-ttu-id="27d9a-109">AddHandler 문</span><span class="sxs-lookup"><span data-stu-id="27d9a-109">AddHandler Statement</span></span>](../../visual-basic/language-reference/statements/addhandler-statement.md)  
- [<span data-ttu-id="27d9a-110">Event 문</span><span class="sxs-lookup"><span data-stu-id="27d9a-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a><span data-ttu-id="b58d2-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="b58d2-108">See also</span></span>
+- [<span data-ttu-id="b58d2-109">AddHandler 문</span><span class="sxs-lookup"><span data-stu-id="b58d2-109">AddHandler Statement</span></span>](../../visual-basic/language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="b58d2-110">Event 문</span><span class="sxs-lookup"><span data-stu-id="b58d2-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
