--- a/docs/visual-basic/misc/bc30019.md
+++ b/docs/visual-basic/misc/bc30019.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30019
 ms.assetid: 7f0c7bb9-8e81-44bf-acc5-80d9785708aa
-ms.openlocfilehash: b0cf7b90e68d9a18478f3f98559f8b354c97173e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 9db769f3ccdb49f19def73ab12244e2a728ed1cf
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33600116"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54544054"
 ---
-# <a name="delegates-cannot-handle-events"></a><span data-ttu-id="069e0-102">대리자는 이벤트를 처리할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="069e0-102">Delegates cannot handle events</span></span>
-<span data-ttu-id="069e0-103">대리자는 공유 프로시저 또는 개체의 인스턴스 프로시저를 가리키는 참조 형식입니다.</span><span class="sxs-lookup"><span data-stu-id="069e0-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="069e0-104">할당을 통해 가리키는 프로시저를 변경할 수 있으므로 `Delegate` 문은 `Handles` 또는 `Implements` 절을 지원할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="069e0-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
+# <a name="delegates-cannot-handle-events"></a><span data-ttu-id="3c3a9-102">대리자는 이벤트를 처리할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3c3a9-102">Delegates cannot handle events</span></span>
+<span data-ttu-id="3c3a9-103">대리자는 공유 프로시저 또는 개체의 인스턴스 프로시저를 가리키는 참조 형식입니다.</span><span class="sxs-lookup"><span data-stu-id="3c3a9-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="3c3a9-104">할당을 통해 가리키는 프로시저를 변경할 수 있으므로 `Delegate` 문은 `Handles` 또는 `Implements` 절을 지원할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3c3a9-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
   
- <span data-ttu-id="069e0-105">**오류 ID:** BC30019</span><span class="sxs-lookup"><span data-stu-id="069e0-105">**Error ID:** BC30019</span></span>  
+ <span data-ttu-id="3c3a9-105">**오류 ID:** BC30019</span><span class="sxs-lookup"><span data-stu-id="3c3a9-105">**Error ID:** BC30019</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="069e0-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="069e0-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3c3a9-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3c3a9-106">To correct this error</span></span>  
   
--   <span data-ttu-id="069e0-107">`Handles` 문에서 `Delegate` 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="069e0-107">Remove the `Handles` clause from the `Delegate` statement.</span></span>  
+-   <span data-ttu-id="3c3a9-107">`Handles` 문에서 `Delegate` 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="3c3a9-107">Remove the `Handles` clause from the `Delegate` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="069e0-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="069e0-108">See Also</span></span>  
-   
- [<span data-ttu-id="069e0-109">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="069e0-109">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)  
- [<span data-ttu-id="069e0-110">Handles</span><span class="sxs-lookup"><span data-stu-id="069e0-110">Handles</span></span>](../../visual-basic/language-reference/statements/handles-clause.md)  
- [<span data-ttu-id="069e0-111">Implements 문</span><span class="sxs-lookup"><span data-stu-id="069e0-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+## <a name="see-also"></a><span data-ttu-id="3c3a9-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="3c3a9-108">See also</span></span>
+
+- [<span data-ttu-id="3c3a9-109">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="3c3a9-109">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="3c3a9-110">Handles</span><span class="sxs-lookup"><span data-stu-id="3c3a9-110">Handles</span></span>](../../visual-basic/language-reference/statements/handles-clause.md)
+- [<span data-ttu-id="3c3a9-111">Implements 문</span><span class="sxs-lookup"><span data-stu-id="3c3a9-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
