--- a/docs/visual-basic/misc/bc30195.md
+++ b/docs/visual-basic/misc/bc30195.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30195
 ms.assetid: 95684eaa-5aa2-4ae4-9a73-5f97c491e02c
-ms.openlocfilehash: ec1dc233461505d4906b97ab463e56398e675001
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 15e6b89df929ef285c198b69577ad4ebc763371d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53770639"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54541849"
 ---
-# <a name="expected-one-of-dim-const-public-private-protected-friend-shadows-readonly-or-shared"></a><span data-ttu-id="1b095-102">'Dim', 'Const', 'Public', 'Private', 'Protected', 'Friend', 'Shadows', 'ReadOnly' 또는 'Shared' 중 하나가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="1b095-102">Expected one of 'Dim', 'Const', 'Public', 'Private', 'Protected', 'Friend', 'Shadows', 'ReadOnly' or 'Shared'</span></span>
-<span data-ttu-id="1b095-103">선언문에 선언 키워드가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1b095-103">A declaration statement is missing a declaration keyword.</span></span> <span data-ttu-id="1b095-104">한 가지 가능한 원인은 특성 선언이 메서드를 호출하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="1b095-104">One possible cause is that an attribute declaration calls a method.</span></span>  
+# <a name="expected-one-of-dim-const-public-private-protected-friend-shadows-readonly-or-shared"></a><span data-ttu-id="f762a-102">'Dim', 'Const', 'Public', 'Private', 'Protected', 'Friend', 'Shadows', 'ReadOnly' 또는 'Shared' 중 하나가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="f762a-102">Expected one of 'Dim', 'Const', 'Public', 'Private', 'Protected', 'Friend', 'Shadows', 'ReadOnly' or 'Shared'</span></span>
+<span data-ttu-id="f762a-103">선언문에 선언 키워드가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f762a-103">A declaration statement is missing a declaration keyword.</span></span> <span data-ttu-id="f762a-104">한 가지 가능한 원인은 특성 선언이 메서드를 호출하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="f762a-104">One possible cause is that an attribute declaration calls a method.</span></span>  
   
- <span data-ttu-id="1b095-105">**오류 ID:** BC30195</span><span class="sxs-lookup"><span data-stu-id="1b095-105">**Error ID:** BC30195</span></span>  
+ <span data-ttu-id="f762a-105">**오류 ID:** BC30195</span><span class="sxs-lookup"><span data-stu-id="f762a-105">**Error ID:** BC30195</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1b095-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1b095-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f762a-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f762a-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="1b095-107">메서드가 특성 선언 내에서 선언되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="1b095-107">Check to see if a method is declared inside an attribute declaration.</span></span>  
+1.  <span data-ttu-id="f762a-107">메서드가 특성 선언 내에서 선언되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="f762a-107">Check to see if a method is declared inside an attribute declaration.</span></span>  
   
-2.  <span data-ttu-id="1b095-108">적절한 선언 키워드로 문을 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="1b095-108">Start the statement with the appropriate declaration keyword.</span></span>  
+2.  <span data-ttu-id="f762a-108">적절한 선언 키워드로 문을 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="f762a-108">Start the statement with the appropriate declaration keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1b095-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1b095-109">See Also</span></span>  
- [<span data-ttu-id="1b095-110">선언 요소</span><span class="sxs-lookup"><span data-stu-id="1b095-110">Declared Elements</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/index.md)  
- [<span data-ttu-id="1b095-111">배열은 'New'로 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1b095-111">Arrays cannot be declared with 'New'</span></span>](../../visual-basic/misc/bc30053.md)
+## <a name="see-also"></a><span data-ttu-id="f762a-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="f762a-109">See also</span></span>
+- [<span data-ttu-id="f762a-110">선언 요소</span><span class="sxs-lookup"><span data-stu-id="f762a-110">Declared Elements</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/index.md)
+- [<span data-ttu-id="f762a-111">배열은 'New'로 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f762a-111">Arrays cannot be declared with 'New'</span></span>](../../visual-basic/misc/bc30053.md)
