--- a/docs/visual-basic/misc/bc30215.md
+++ b/docs/visual-basic/misc/bc30215.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30215
 ms.assetid: 013f4200-b3cf-4cd8-a235-15067ca773fc
-ms.openlocfilehash: 71965c858667b99a6a4062d0459da43c47abb223
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: ddf6f22ee9dff70bb31b35836ded0b7597f98da3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53783172"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54542637"
 ---
-# <a name="sub-or-function-expected"></a><span data-ttu-id="84487-102">'Sub' 또는 'Function'이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="84487-102">'Sub' or 'Function' expected</span></span>
-<span data-ttu-id="84487-103">`Declare` 문이 `Sub` 또는 `Function`을 지정하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="84487-103">A `Declare` statement does not specify either `Sub` or `Function`.</span></span> <span data-ttu-id="84487-104">`Declare` 는 외부 프로시저를 식별하며 프로시저 종류를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="84487-104">`Declare` identifies an external procedure and must specify which kind of procedure.</span></span>  
+# <a name="sub-or-function-expected"></a><span data-ttu-id="eeeb6-102">'Sub' 또는 'Function'이 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="eeeb6-102">'Sub' or 'Function' expected</span></span>
+<span data-ttu-id="eeeb6-103">`Declare` 문이 `Sub` 또는 `Function`을 지정하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="eeeb6-103">A `Declare` statement does not specify either `Sub` or `Function`.</span></span> <span data-ttu-id="eeeb6-104">`Declare` 는 외부 프로시저를 식별하며 프로시저 종류를 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="eeeb6-104">`Declare` identifies an external procedure and must specify which kind of procedure.</span></span>  
   
- <span data-ttu-id="84487-105">**오류 ID:** BC30215</span><span class="sxs-lookup"><span data-stu-id="84487-105">**Error ID:** BC30215</span></span>  
+ <span data-ttu-id="eeeb6-105">**오류 ID:** BC30215</span><span class="sxs-lookup"><span data-stu-id="eeeb6-105">**Error ID:** BC30215</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="84487-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="84487-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="eeeb6-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="eeeb6-106">To correct this error</span></span>  
   
--   <span data-ttu-id="84487-107">`Sub` 문에 `Function` 또는 `Declare` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="84487-107">Add either the `Sub` or `Function` keyword to the `Declare` statement.</span></span>  
+-   <span data-ttu-id="eeeb6-107">`Sub` 문에 `Function` 또는 `Declare` 키워드를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="eeeb6-107">Add either the `Sub` or `Function` keyword to the `Declare` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="84487-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="84487-108">See Also</span></span>  
- [<span data-ttu-id="84487-109">Declare 문</span><span class="sxs-lookup"><span data-stu-id="84487-109">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
+## <a name="see-also"></a><span data-ttu-id="eeeb6-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="eeeb6-108">See also</span></span>
+- [<span data-ttu-id="eeeb6-109">Declare 문</span><span class="sxs-lookup"><span data-stu-id="eeeb6-109">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
