--- a/docs/visual-basic/misc/bc30297.md
+++ b/docs/visual-basic/misc/bc30297.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30297
 ms.assetid: dfca67d7-f4d7-4451-a937-68f22b8527d5
-ms.openlocfilehash: 85d576300a0895f49aa1876e9f8b63f06ed3ba76
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 3ec277c6e74f81a99093cb8df58887f971844abe
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771991"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54544304"
 ---
-# <a name="lterrorgt-ltconstructorname1gt-calls-ltconstructorname2gt"></a><span data-ttu-id="bc7a8-102">&lt;오류&gt;: '&lt;constructorname1&gt;'호출'&lt;constructorname2&gt;'</span><span class="sxs-lookup"><span data-stu-id="bc7a8-102">&lt;error&gt;: '&lt;constructorname1&gt;' calls '&lt;constructorname2&gt;'</span></span>
-<span data-ttu-id="bc7a8-103">순환 생성자 호출이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="bc7a8-103">A circular constructor call occurs.</span></span> <span data-ttu-id="bc7a8-104">생성자가 `Me.New()` 또는 `MyClass.New()`를 호출합니다.</span><span class="sxs-lookup"><span data-stu-id="bc7a8-104">A constructor makes a call to `Me.New()` or `MyClass.New()`.</span></span> <span data-ttu-id="bc7a8-105">서로 다른 인수 목록을 사용하는 오버로드된 생성자를 호출하려는 시도 때문일 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="bc7a8-105">One possible cause is an attempt to call an overloaded constructor with a different argument list.</span></span>  
+# <a name="lterrorgt-ltconstructorname1gt-calls-ltconstructorname2gt"></a><span data-ttu-id="47bdf-102">&lt;오류&gt;: '&lt;constructorname1&gt;'호출'&lt;constructorname2&gt;'</span><span class="sxs-lookup"><span data-stu-id="47bdf-102">&lt;error&gt;: '&lt;constructorname1&gt;' calls '&lt;constructorname2&gt;'</span></span>
+<span data-ttu-id="47bdf-103">순환 생성자 호출이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="47bdf-103">A circular constructor call occurs.</span></span> <span data-ttu-id="47bdf-104">생성자가 `Me.New()` 또는 `MyClass.New()`를 호출합니다.</span><span class="sxs-lookup"><span data-stu-id="47bdf-104">A constructor makes a call to `Me.New()` or `MyClass.New()`.</span></span> <span data-ttu-id="47bdf-105">서로 다른 인수 목록을 사용하는 오버로드된 생성자를 호출하려는 시도 때문일 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="47bdf-105">One possible cause is an attempt to call an overloaded constructor with a different argument list.</span></span>  
   
- <span data-ttu-id="bc7a8-106">**오류 ID:** BC30297</span><span class="sxs-lookup"><span data-stu-id="bc7a8-106">**Error ID:** BC30297</span></span>  
+ <span data-ttu-id="47bdf-106">**오류 ID:** BC30297</span><span class="sxs-lookup"><span data-stu-id="47bdf-106">**Error ID:** BC30297</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bc7a8-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="bc7a8-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="47bdf-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="47bdf-107">To correct this error</span></span>  
   
--   <span data-ttu-id="bc7a8-108">서로 다른 인수 목록이 사용하여 오버로드된 생성자를 호출합니다.</span><span class="sxs-lookup"><span data-stu-id="bc7a8-108">Use a different argument list to call an overloaded constructor.</span></span>  
+-   <span data-ttu-id="47bdf-108">서로 다른 인수 목록이 사용하여 오버로드된 생성자를 호출합니다.</span><span class="sxs-lookup"><span data-stu-id="47bdf-108">Use a different argument list to call an overloaded constructor.</span></span>  
   
--   <span data-ttu-id="bc7a8-109">액세스할 수 있는 오버로드가 없는 경우 `Me.New()` 또는 `MyClass.New()`에 대한 호출을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="bc7a8-109">If there are no accessible overloads, remove the call to `Me.New()` or `MyClass.New()`.</span></span>  
+-   <span data-ttu-id="47bdf-109">액세스할 수 있는 오버로드가 없는 경우 `Me.New()` 또는 `MyClass.New()`에 대한 호출을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="47bdf-109">If there are no accessible overloads, remove the call to `Me.New()` or `MyClass.New()`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bc7a8-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="bc7a8-110">See Also</span></span>  
- [<span data-ttu-id="bc7a8-111">생성자(C++)</span><span class="sxs-lookup"><span data-stu-id="bc7a8-111">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+## <a name="see-also"></a><span data-ttu-id="47bdf-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="47bdf-110">See also</span></span>
+- [<span data-ttu-id="47bdf-111">생성자</span><span class="sxs-lookup"><span data-stu-id="47bdf-111">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
