--- a/docs/visual-basic/misc/bc30321.md
+++ b/docs/visual-basic/misc/bc30321.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30321
 ms.assetid: eeedbceb-2c8d-4acb-b84c-8b42c058f083
-ms.openlocfilehash: 30e39dc4a4628c81bfcf80f293a5c1bba8785063
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 8072a75ab89f9cc517007a9c95210615735213f5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53761630"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54542342"
 ---
-# <a name="case-cannot-follow-a-case-else-in-the-same-select-statement"></a><span data-ttu-id="58253-102">'Case'는 같은 'Select' 문에서 'Case Else' 뒤에 올 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="58253-102">'Case' cannot follow a 'Case Else' in the same 'Select' statement</span></span>
-<span data-ttu-id="58253-103">`Case Else` 문은 최초 `Case`와 일치하는 부분이 없는 경우 실행될 문을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="58253-103">A `Case Else` statement introduces statements to be executed if no match is found for the initial `Case`.</span></span> <span data-ttu-id="58253-104">동일한 `Case` 블록에서 `Case Else` 문이 `Select` 다음에 있습니다.</span><span class="sxs-lookup"><span data-stu-id="58253-104">A `Case` statement has been found after a `Case Else` in the same `Select` block.</span></span>  
+# <a name="case-cannot-follow-a-case-else-in-the-same-select-statement"></a><span data-ttu-id="39310-102">'Case'는 같은 'Select' 문에서 'Case Else' 뒤에 올 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="39310-102">'Case' cannot follow a 'Case Else' in the same 'Select' statement</span></span>
+<span data-ttu-id="39310-103">`Case Else` 문은 최초 `Case`와 일치하는 부분이 없는 경우 실행될 문을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="39310-103">A `Case Else` statement introduces statements to be executed if no match is found for the initial `Case`.</span></span> <span data-ttu-id="39310-104">동일한 `Case` 블록에서 `Case Else` 문이 `Select` 다음에 있습니다.</span><span class="sxs-lookup"><span data-stu-id="39310-104">A `Case` statement has been found after a `Case Else` in the same `Select` block.</span></span>  
   
- <span data-ttu-id="58253-105">**오류 ID:** BC30321</span><span class="sxs-lookup"><span data-stu-id="58253-105">**Error ID:** BC30321</span></span>  
+ <span data-ttu-id="39310-105">**오류 ID:** BC30321</span><span class="sxs-lookup"><span data-stu-id="39310-105">**Error ID:** BC30321</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="58253-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="58253-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="39310-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="39310-106">To correct this error</span></span>  
   
--   <span data-ttu-id="58253-107">`Case Else` 를 `Case` 문 다음에 적절한 위치로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="58253-107">Move the `Case Else` to the appropriate location after the `Case` statement.</span></span>  
+-   <span data-ttu-id="39310-107">`Case Else` 를 `Case` 문 다음에 적절한 위치로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="39310-107">Move the `Case Else` to the appropriate location after the `Case` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="58253-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="58253-108">See Also</span></span>  
- [<span data-ttu-id="58253-109">Select...Case 문</span><span class="sxs-lookup"><span data-stu-id="58253-109">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+## <a name="see-also"></a><span data-ttu-id="39310-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="39310-108">See also</span></span>
+- [<span data-ttu-id="39310-109">Select...Case 문</span><span class="sxs-lookup"><span data-stu-id="39310-109">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
