--- a/docs/visual-basic/misc/bc31067.md
+++ b/docs/visual-basic/misc/bc31067.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31067
 ms.assetid: 8f854f5f-99b1-40c9-8c21-e24712f37f71
-ms.openlocfilehash: 51bfba1b1e16f5e5e3e76cdeb822c8ec74c08604
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 616a8e121a105e656c48ae616a98dc2958b737e7
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53771107"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54546045"
 ---
-# <a name="method-in-a-structure-cannot-be-declared-protected-or-protected-friend"></a><span data-ttu-id="eff73-102">구조체의 메서드는 'Protected' 또는 'Protected Friend'로 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="eff73-102">Method in a structure cannot be declared 'Protected' or 'Protected Friend'</span></span>
-<span data-ttu-id="eff73-103">구조체의 메서드가 `Protected` 또는 `Protected Friend`로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="eff73-103">A method in a structure was declared as `Protected` or `Protected Friend`.</span></span>  
+# <a name="method-in-a-structure-cannot-be-declared-protected-or-protected-friend"></a><span data-ttu-id="cd31b-102">구조체의 메서드는 'Protected' 또는 'Protected Friend'로 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="cd31b-102">Method in a structure cannot be declared 'Protected' or 'Protected Friend'</span></span>
+<span data-ttu-id="cd31b-103">구조체의 메서드가 `Protected` 또는 `Protected Friend`로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="cd31b-103">A method in a structure was declared as `Protected` or `Protected Friend`.</span></span>  
   
- <span data-ttu-id="eff73-104">**오류 ID:** BC31067</span><span class="sxs-lookup"><span data-stu-id="eff73-104">**Error ID:** BC31067</span></span>  
+ <span data-ttu-id="cd31b-104">**오류 ID:** BC31067</span><span class="sxs-lookup"><span data-stu-id="cd31b-104">**Error ID:** BC31067</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="eff73-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="eff73-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cd31b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="cd31b-105">To correct this error</span></span>  
   
--   <span data-ttu-id="eff73-106">구조체 내의 메서드를 `Public` 또는 `Private`으로 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="eff73-106">Declare methods inside structures as `Public` or `Private`.</span></span>  
+-   <span data-ttu-id="cd31b-106">구조체 내의 메서드를 `Public` 또는 `Private`으로 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="cd31b-106">Declare methods inside structures as `Public` or `Private`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="eff73-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="eff73-107">See Also</span></span>  
- [<span data-ttu-id="eff73-108">Structure 문</span><span class="sxs-lookup"><span data-stu-id="eff73-108">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
- [<span data-ttu-id="eff73-109">보호됨</span><span class="sxs-lookup"><span data-stu-id="eff73-109">Protected</span></span>](../../visual-basic/language-reference/modifiers/protected.md)  
- [<span data-ttu-id="eff73-110">Friend</span><span class="sxs-lookup"><span data-stu-id="eff73-110">Friend</span></span>](../../visual-basic/language-reference/modifiers/friend.md)
+## <a name="see-also"></a><span data-ttu-id="cd31b-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="cd31b-107">See also</span></span>
+- [<span data-ttu-id="cd31b-108">Structure 문</span><span class="sxs-lookup"><span data-stu-id="cd31b-108">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="cd31b-109">보호됨</span><span class="sxs-lookup"><span data-stu-id="cd31b-109">Protected</span></span>](../../visual-basic/language-reference/modifiers/protected.md)
+- [<span data-ttu-id="cd31b-110">Friend</span><span class="sxs-lookup"><span data-stu-id="cd31b-110">Friend</span></span>](../../visual-basic/language-reference/modifiers/friend.md)
