commit translated contents

--- a/docs/visual-basic/misc/bc36594.md
+++ b/docs/visual-basic/misc/bc36594.md
@@ -1,5 +1,5 @@
 ---
-title: 메서드의 정의 &lt;메서드&gt; 는이 컨텍스트에서 액세스할 수 없습니다
+title: 메서드의 정의 &lt;메서드&gt; 이 컨텍스트에서 액세스할 수 없는
 ms.date: 07/20/2015
 f1_keywords:
 - bc36594
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36594
 ms.assetid: ee0f622a-e82f-4a79-ba78-354558e64dc4
-ms.openlocfilehash: 085eb849fe604115458fcca3d5d7926cfba3ba6a
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: d9b526a3b8031b8dcf1a85bb817a2ebea16be778
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630434"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54536167"
 ---
-# <a name="definition-of-method-ltmethodgt-is-not-accessible-in-this-context"></a>메서드의 정의 &lt;메서드&gt; 는이 컨텍스트에서 액세스할 수 없습니다
+# <a name="definition-of-method-ltmethodgt-is-not-accessible-in-this-context"></a>메서드의 정의 &lt;메서드&gt; 이 컨텍스트에서 액세스할 수 없는
 존재하지 않는 집계 함수가 `Into` 연산자에 포함되었습니다.  
   
  **오류 ID:** BC36594  
@@ -23,11 +23,11 @@ ms.locfileid: "33630434"
   
 -   집계 함수 이름의 철자를 확인하고 필요한 경우 수정합니다.  
   
--   메서드를 사용자 지정 집계 함수로 추가합니다(확장 메서드). 사용자 정의 집계 함수를 만드는 방법에 대 한 자세한 내용은 참조 [Aggregate 절](../../visual-basic/language-reference/queries/aggregate-clause.md)합니다.  
+-   메서드를 사용자 지정 집계 함수로 추가합니다(확장 메서드). 사용자 지정 집계 함수를 만드는 방법에 대 한 자세한 내용은 참조 하세요. [Aggregate 절](../../visual-basic/language-reference/queries/aggregate-clause.md)합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Aggregate 절](../../visual-basic/language-reference/queries/aggregate-clause.md)  
- [Group By 절](../../visual-basic/language-reference/queries/group-by-clause.md)  
- [Group Join 절](../../visual-basic/language-reference/queries/group-join-clause.md)  
- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+## <a name="see-also"></a>참고자료
+- [Aggregate 절](../../visual-basic/language-reference/queries/aggregate-clause.md)
+- [Group By 절](../../visual-basic/language-reference/queries/group-by-clause.md)
+- [Group Join 절](../../visual-basic/language-reference/queries/group-join-clause.md)
+- [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
