--- a/docs/visual-basic/misc/bc31186.md
+++ b/docs/visual-basic/misc/bc31186.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31186
 ms.assetid: 14436245-1b2e-4ca9-a139-bd1d79ed9d72
-ms.openlocfilehash: 43898ca65d925f5cc23a5d841684f99dadf8077e
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: bf30bf7420583d4fa1d645ee776ee71bbfa750e6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775098"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54553219"
 ---
 # <a name="-is-not-allowed"></a>':'을 사용할 수 없습니다.
 ':'을 사용할 수 없습니다. 이 컨텍스트에서는 정규화된 XML 이름을 사용할 수 없습니다.  
@@ -27,6 +27,6 @@ ms.locfileid: "53775098"
   
      XML 이름에 사용할 수 있는 문자에 대한 자세한 내용은 [XML(Extensible Markup Language) 1.0](https://www.w3.org/TR/xml)을 참조하세요.  
   
-## <a name="see-also"></a>참고 항목  
- [XML 리터럴](../../visual-basic/language-reference/xml-literals/index.md)  
- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a>참고자료
+- [XML 리터럴](../../visual-basic/language-reference/xml-literals/index.md)
+- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
