--- a/docs/visual-basic/misc/bc32046.md
+++ b/docs/visual-basic/misc/bc32046.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32046
 ms.assetid: 7ec6b52d-6fd5-47a0-b4a2-163bfd3dae35
-ms.openlocfilehash: a88dd36b575c327f42ad34edfb13503706621228
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 9440081f36df0c84849eb6135c2a609a81bca765
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782176"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54534100"
 ---
 # <a name="new-cannot-be-used-on-a-type-parameter-that-does-not-have-a-new-constraint"></a>'New' 제약 조건이 없는 형식 매개 변수에는 'New'를 사용할 수 없습니다.
 선언문을 사용 하는 [New 연산자](../../visual-basic/language-reference/operators/new-operator.md) 절을 만들 수 형식으로 형식 매개 변수를 지정 하 고 형식 매개 변수를 선언 하지는 `New` 제약 조건.  
@@ -27,6 +27,6 @@ ms.locfileid: "53782176"
   
 -   형식 인수가 액세스할 수 있는 매개 변수가 없는 생성자를 노출하도록 요구할 수 없는 경우 선언문에서 `New` 절을 제거합니다. 해당 형식 매개 변수에 전달된 형식 인수가 인스턴스 생성을 허용하도록 보장할 수 없습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a>참고자료
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)
