--- a/docs/visual-basic/misc/bc32129.md
+++ b/docs/visual-basic/misc/bc32129.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32129
 ms.assetid: 9e0fe5c9-72c7-4905-b177-d00cc3469ea9
-ms.openlocfilehash: c840f84669e36a3b3c19ed57eb89c002056c1d91
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8f3714ed032a2f1a548052b3328e75ed0adc1abd
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33628224"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54565529"
 ---
 # <a name="enum-types-cannot-be-nullable"></a>열거형 형식은 nullable일 수 없습니다.
 열거형을 선언하는 데 사용되는 기본 형식은 nullable일 수 없습니다. 예를 들어 다음 코드는 이 오류를 생성합니다.  
@@ -30,6 +30,6 @@ ms.locfileid: "33628224"
   
 -   `Enum` 선언에 nullable 기본 형식을 사용하지 마세요.  
   
-## <a name="see-also"></a>참고 항목  
- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)  
- [Enum 문](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a>참고자료
+- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [Enum 문](../../visual-basic/language-reference/statements/enum-statement.md)
