--- a/docs/visual-basic/misc/bc36628.md
+++ b/docs/visual-basic/misc/bc36628.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36628
 ms.assetid: 3e92ae19-6a19-4b0b-9dd9-fba31cdb85a6
-ms.openlocfilehash: ac3af030081ed39b873130ac4bfefd09a1f0da0c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: dc7263b727c8690388c58901873a4ef716ec779b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764854"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54543291"
 ---
 # <a name="a-nullable-type-cannot-be-inferred-for-variable-ltvariablenamegt"></a>변수에 대해 nullable 형식을 유추할 수 없습니다 '&lt;variablename&gt;'
 배열, 클래스, `String`등의 참조 형식에서 nullable 형식을 유추할 수 없습니다. 데이터 형식이 유추된 값은 값 형식이어야 합니다. 다음 코드에서는 이 오류를 보여 줍니다.  
@@ -34,5 +34,5 @@ Dim intVar? = 10
   
 -   nullable 지정을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a>참고자료
+- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
