commit bilingual contents

--- a/docs/visual-basic/misc/bc36628.md
+++ b/docs/visual-basic/misc/bc36628.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36628
 ms.assetid: 3e92ae19-6a19-4b0b-9dd9-fba31cdb85a6
-ms.openlocfilehash: ac3af030081ed39b873130ac4bfefd09a1f0da0c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: dc7263b727c8690388c58901873a4ef716ec779b
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53764854"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54543291"
 ---
-# <a name="a-nullable-type-cannot-be-inferred-for-variable-ltvariablenamegt"></a><span data-ttu-id="456f9-102">변수에 대해 nullable 형식을 유추할 수 없습니다 '&lt;variablename&gt;'</span><span class="sxs-lookup"><span data-stu-id="456f9-102">A nullable type cannot be inferred for variable '&lt;variablename&gt;'</span></span>
-<span data-ttu-id="456f9-103">배열, 클래스, `String`등의 참조 형식에서 nullable 형식을 유추할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="456f9-103">A nullable type cannot be inferred from a reference type, such as an array, a class, or a `String`.</span></span> <span data-ttu-id="456f9-104">데이터 형식이 유추된 값은 값 형식이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="456f9-104">The value from which the data type is inferred must be a value type.</span></span> <span data-ttu-id="456f9-105">다음 코드에서는 이 오류를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="456f9-105">The following code illustrates this error.</span></span>  
+# <a name="a-nullable-type-cannot-be-inferred-for-variable-ltvariablenamegt"></a><span data-ttu-id="f7a88-102">변수에 대해 nullable 형식을 유추할 수 없습니다 '&lt;variablename&gt;'</span><span class="sxs-lookup"><span data-stu-id="f7a88-102">A nullable type cannot be inferred for variable '&lt;variablename&gt;'</span></span>
+<span data-ttu-id="f7a88-103">배열, 클래스, `String`등의 참조 형식에서 nullable 형식을 유추할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f7a88-103">A nullable type cannot be inferred from a reference type, such as an array, a class, or a `String`.</span></span> <span data-ttu-id="f7a88-104">데이터 형식이 유추된 값은 값 형식이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="f7a88-104">The value from which the data type is inferred must be a value type.</span></span> <span data-ttu-id="f7a88-105">다음 코드에서는 이 오류를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="f7a88-105">The following code illustrates this error.</span></span>  
   
 ```vb  
 '' Not valid.   
@@ -28,11 +28,11 @@ ms.locfileid: "53764854"
 Dim intVar? = 10  
 ```  
   
- <span data-ttu-id="456f9-106">**오류 ID:** BC36628</span><span class="sxs-lookup"><span data-stu-id="456f9-106">**Error ID:** BC36628</span></span>  
+ <span data-ttu-id="f7a88-106">**오류 ID:** BC36628</span><span class="sxs-lookup"><span data-stu-id="f7a88-106">**Error ID:** BC36628</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="456f9-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="456f9-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f7a88-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f7a88-107">To correct this error</span></span>  
   
--   <span data-ttu-id="456f9-108">nullable 지정을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="456f9-108">Remove the nullable designation.</span></span>  
+-   <span data-ttu-id="f7a88-108">nullable 지정을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="f7a88-108">Remove the nullable designation.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="456f9-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="456f9-109">See Also</span></span>  
- [<span data-ttu-id="456f9-110">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="456f9-110">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a><span data-ttu-id="f7a88-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="f7a88-109">See also</span></span>
+- [<span data-ttu-id="f7a88-110">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="f7a88-110">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
