--- a/docs/visual-basic/misc/bc30742.md
+++ b/docs/visual-basic/misc/bc30742.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30742
 ms.assetid: f1a53307-eb64-4582-abcc-9c6bc24bdbf2
-ms.openlocfilehash: 826c7ac17f6c2fd33107c2326f60eaef3dd5329e
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: d688bf797b71e64f4725efb889455416dac03dbc
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53779532"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54545240"
 ---
-# <a name="value-ltvaluename1gt-cannot-be-converted-to-ltvaluename2gt"></a><span data-ttu-id="7d4d9-102">값 '&lt;valuename1&gt;'로 변환할 수 없습니다'&lt;valuename2&gt;'</span><span class="sxs-lookup"><span data-stu-id="7d4d9-102">Value '&lt;valuename1&gt;' cannot be converted to '&lt;valuename2&gt;'</span></span>
-<span data-ttu-id="7d4d9-103">호환되지 않는 두 형식 간에 형식을 변환하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="7d4d9-103">A type conversion was attempted between two incompatible types.</span></span>  
+# <a name="value-ltvaluename1gt-cannot-be-converted-to-ltvaluename2gt"></a><span data-ttu-id="f53c2-102">값 '&lt;valuename1&gt;'로 변환할 수 없습니다'&lt;valuename2&gt;'</span><span class="sxs-lookup"><span data-stu-id="f53c2-102">Value '&lt;valuename1&gt;' cannot be converted to '&lt;valuename2&gt;'</span></span>
+<span data-ttu-id="f53c2-103">호환되지 않는 두 형식 간에 형식을 변환하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="f53c2-103">A type conversion was attempted between two incompatible types.</span></span>  
   
- <span data-ttu-id="7d4d9-104">**오류 ID:** BC30742</span><span class="sxs-lookup"><span data-stu-id="7d4d9-104">**Error ID:** BC30742</span></span>  
+ <span data-ttu-id="f53c2-104">**오류 ID:** BC30742</span><span class="sxs-lookup"><span data-stu-id="f53c2-104">**Error ID:** BC30742</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7d4d9-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="7d4d9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f53c2-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f53c2-105">To correct this error</span></span>  
   
--   <span data-ttu-id="7d4d9-106">캐스트 중인 형식을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="7d4d9-106">Verify the types that are being cast.</span></span>  
+-   <span data-ttu-id="f53c2-106">캐스트 중인 형식을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="f53c2-106">Verify the types that are being cast.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7d4d9-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="7d4d9-107">See Also</span></span>  
- [<span data-ttu-id="7d4d9-108">CType 함수</span><span class="sxs-lookup"><span data-stu-id="7d4d9-108">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
+## <a name="see-also"></a><span data-ttu-id="f53c2-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="f53c2-107">See also</span></span>
+- [<span data-ttu-id="f53c2-108">CType 함수</span><span class="sxs-lookup"><span data-stu-id="f53c2-108">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
