--- a/docs/visual-basic/misc/bc31186.md
+++ b/docs/visual-basic/misc/bc31186.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC31186
 ms.assetid: 14436245-1b2e-4ca9-a139-bd1d79ed9d72
-ms.openlocfilehash: 43898ca65d925f5cc23a5d841684f99dadf8077e
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: bf30bf7420583d4fa1d645ee776ee71bbfa750e6
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53775098"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54553219"
 ---
-# <a name="-is-not-allowed"></a><span data-ttu-id="80dbc-102">':'을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="80dbc-102">':' is not allowed</span></span>
-<span data-ttu-id="80dbc-103">':'을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="80dbc-103">':' is not allowed.</span></span> <span data-ttu-id="80dbc-104">이 컨텍스트에서는 정규화된 XML 이름을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="80dbc-104">XML qualified names cannot be used in this context.</span></span>  
+# <a name="-is-not-allowed"></a><span data-ttu-id="9fc81-102">':'을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9fc81-102">':' is not allowed</span></span>
+<span data-ttu-id="9fc81-103">':'을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9fc81-103">':' is not allowed.</span></span> <span data-ttu-id="9fc81-104">이 컨텍스트에서는 정규화된 XML 이름을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9fc81-104">XML qualified names cannot be used in this context.</span></span>  
   
- <span data-ttu-id="80dbc-105">잘못된 위치(예: 처리 명령 리터럴의 대상)에 정규화된 이름을 사용하여 XML 리터럴을 지정했습니다.</span><span class="sxs-lookup"><span data-stu-id="80dbc-105">An XML literal has been specified with a qualified name in an invalid location, for example, a target in a processing instruction literal.</span></span>  
+ <span data-ttu-id="9fc81-105">잘못된 위치(예: 처리 명령 리터럴의 대상)에 정규화된 이름을 사용하여 XML 리터럴을 지정했습니다.</span><span class="sxs-lookup"><span data-stu-id="9fc81-105">An XML literal has been specified with a qualified name in an invalid location, for example, a target in a processing instruction literal.</span></span>  
   
- <span data-ttu-id="80dbc-106">**오류 ID:** BC31186</span><span class="sxs-lookup"><span data-stu-id="80dbc-106">**Error ID:** BC31186</span></span>  
+ <span data-ttu-id="9fc81-106">**오류 ID:** BC31186</span><span class="sxs-lookup"><span data-stu-id="9fc81-106">**Error ID:** BC31186</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="80dbc-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="80dbc-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9fc81-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9fc81-107">To correct this error</span></span>  
   
--   <span data-ttu-id="80dbc-108">정규화된 이름을 가진 XML 리터럴을 제거하거나 올바른 위치로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="80dbc-108">Remove the XML literal with the qualified name or move it to a valid location.</span></span>  
+-   <span data-ttu-id="9fc81-108">정규화된 이름을 가진 XML 리터럴을 제거하거나 올바른 위치로 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="9fc81-108">Remove the XML literal with the qualified name or move it to a valid location.</span></span>  
   
-     <span data-ttu-id="80dbc-109">XML 이름에 사용할 수 있는 문자에 대한 자세한 내용은 [XML(Extensible Markup Language) 1.0](https://www.w3.org/TR/xml)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="80dbc-109">For information about which characters are valid in XML names, see [Extensible Markup Language (XML) 1.0](https://www.w3.org/TR/xml).</span></span>  
+     <span data-ttu-id="9fc81-109">XML 이름에 사용할 수 있는 문자에 대한 자세한 내용은 [XML(Extensible Markup Language) 1.0](https://www.w3.org/TR/xml)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="9fc81-109">For information about which characters are valid in XML names, see [Extensible Markup Language (XML) 1.0](https://www.w3.org/TR/xml).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="80dbc-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="80dbc-110">See Also</span></span>  
- [<span data-ttu-id="80dbc-111">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="80dbc-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="80dbc-112">XML</span><span class="sxs-lookup"><span data-stu-id="80dbc-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="9fc81-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="9fc81-110">See also</span></span>
+- [<span data-ttu-id="9fc81-111">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="9fc81-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
+- [<span data-ttu-id="9fc81-112">XML</span><span class="sxs-lookup"><span data-stu-id="9fc81-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
