--- a/docs/visual-basic/misc/bc32046.md
+++ b/docs/visual-basic/misc/bc32046.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32046
 ms.assetid: 7ec6b52d-6fd5-47a0-b4a2-163bfd3dae35
-ms.openlocfilehash: a88dd36b575c327f42ad34edfb13503706621228
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 9440081f36df0c84849eb6135c2a609a81bca765
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782176"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54534100"
 ---
-# <a name="new-cannot-be-used-on-a-type-parameter-that-does-not-have-a-new-constraint"></a><span data-ttu-id="b7355-102">'New' 제약 조건이 없는 형식 매개 변수에는 'New'를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-102">'New' cannot be used on a type parameter that does not have a 'New' constraint</span></span>
-<span data-ttu-id="b7355-103">선언문을 사용 하는 [New 연산자](../../visual-basic/language-reference/operators/new-operator.md) 절을 만들 수 형식으로 형식 매개 변수를 지정 하 고 형식 매개 변수를 선언 하지는 `New` 제약 조건.</span><span class="sxs-lookup"><span data-stu-id="b7355-103">A declaration statement uses a [New Operator](../../visual-basic/language-reference/operators/new-operator.md) clause specifying a type parameter as the type to be created, and the type parameter is declared without a `New` constraint.</span></span>  
+# <a name="new-cannot-be-used-on-a-type-parameter-that-does-not-have-a-new-constraint"></a><span data-ttu-id="1357b-102">'New' 제약 조건이 없는 형식 매개 변수에는 'New'를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-102">'New' cannot be used on a type parameter that does not have a 'New' constraint</span></span>
+<span data-ttu-id="1357b-103">선언문을 사용 하는 [New 연산자](../../visual-basic/language-reference/operators/new-operator.md) 절을 만들 수 형식으로 형식 매개 변수를 지정 하 고 형식 매개 변수를 선언 하지는 `New` 제약 조건.</span><span class="sxs-lookup"><span data-stu-id="1357b-103">A declaration statement uses a [New Operator](../../visual-basic/language-reference/operators/new-operator.md) clause specifying a type parameter as the type to be created, and the type parameter is declared without a `New` constraint.</span></span>  
   
- <span data-ttu-id="b7355-104">형식 매개 변수의 *제약 조건* 은 제네릭 형식을 만들 때 해당 형식 매개 변수에 전달되는 형식 인수에 요구 사항을 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-104">A *constraint* on a type parameter imposes a requirement on any type argument passed to that type parameter when the generic type is created.</span></span> <span data-ttu-id="b7355-105">`New` 제약 조건은 해당 형식 인수에서 만드는 코드가 액세스할 수 있는, 매개 변수 없는 생성자를 노출해야 한다는 것을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-105">The `New` constraint specifies that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="b7355-106">이렇게 하면 선언문의 `New` 절에서 해당 형식의 인스턴스를 만들 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-106">This is what allows a `New` clause in a declaration statement to create an instance of that type.</span></span>  
+ <span data-ttu-id="1357b-104">형식 매개 변수의 *제약 조건* 은 제네릭 형식을 만들 때 해당 형식 매개 변수에 전달되는 형식 인수에 요구 사항을 적용합니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-104">A *constraint* on a type parameter imposes a requirement on any type argument passed to that type parameter when the generic type is created.</span></span> <span data-ttu-id="1357b-105">`New` 제약 조건은 해당 형식 인수에서 만드는 코드가 액세스할 수 있는, 매개 변수 없는 생성자를 노출해야 한다는 것을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-105">The `New` constraint specifies that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="1357b-106">이렇게 하면 선언문의 `New` 절에서 해당 형식의 인스턴스를 만들 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-106">This is what allows a `New` clause in a declaration statement to create an instance of that type.</span></span>  
   
- <span data-ttu-id="b7355-107">**오류 ID:** BC32046</span><span class="sxs-lookup"><span data-stu-id="b7355-107">**Error ID:** BC32046</span></span>  
+ <span data-ttu-id="1357b-107">**오류 ID:** BC32046</span><span class="sxs-lookup"><span data-stu-id="1357b-107">**Error ID:** BC32046</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b7355-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b7355-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1357b-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1357b-108">To correct this error</span></span>  
   
--   <span data-ttu-id="b7355-109">형식 인수가 액세스할 수 있는 매개 변수가 없는 생성자를 노출하도록 요구할 수 있는 경우 형식 매개 변수 선언에 `New` 제약 조건을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-109">If you can require the type argument to expose an accessible parameterless constructor, add the `New` constraint to the declaration of the type parameter.</span></span>  
+-   <span data-ttu-id="1357b-109">형식 인수가 액세스할 수 있는 매개 변수가 없는 생성자를 노출하도록 요구할 수 있는 경우 형식 매개 변수 선언에 `New` 제약 조건을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-109">If you can require the type argument to expose an accessible parameterless constructor, add the `New` constraint to the declaration of the type parameter.</span></span>  
   
--   <span data-ttu-id="b7355-110">형식 인수가 액세스할 수 있는 매개 변수가 없는 생성자를 노출하도록 요구할 수 없는 경우 선언문에서 `New` 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-110">If you cannot require the type argument to expose an accessible parameterless constructor, remove the `New` clause from the declaration statement.</span></span> <span data-ttu-id="b7355-111">해당 형식 매개 변수에 전달된 형식 인수가 인스턴스 생성을 허용하도록 보장할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b7355-111">You cannot guarantee that any type argument passed to that type parameter permits creation of an instance.</span></span>  
+-   <span data-ttu-id="1357b-110">형식 인수가 액세스할 수 있는 매개 변수가 없는 생성자를 노출하도록 요구할 수 없는 경우 선언문에서 `New` 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-110">If you cannot require the type argument to expose an accessible parameterless constructor, remove the `New` clause from the declaration statement.</span></span> <span data-ttu-id="1357b-111">해당 형식 매개 변수에 전달된 형식 인수가 인스턴스 생성을 허용하도록 보장할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1357b-111">You cannot guarantee that any type argument passed to that type parameter permits creation of an instance.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b7355-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b7355-112">See Also</span></span>  
- [<span data-ttu-id="b7355-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b7355-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="b7355-114">형식 목록</span><span class="sxs-lookup"><span data-stu-id="b7355-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+## <a name="see-also"></a><span data-ttu-id="1357b-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="1357b-112">See also</span></span>
+- [<span data-ttu-id="1357b-113">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="1357b-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="1357b-114">형식 목록</span><span class="sxs-lookup"><span data-stu-id="1357b-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
