--- a/docs/visual-basic/misc/bc32129.md
+++ b/docs/visual-basic/misc/bc32129.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32129
 ms.assetid: 9e0fe5c9-72c7-4905-b177-d00cc3469ea9
-ms.openlocfilehash: c840f84669e36a3b3c19ed57eb89c002056c1d91
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8f3714ed032a2f1a548052b3328e75ed0adc1abd
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33628224"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54565529"
 ---
-# <a name="enum-types-cannot-be-nullable"></a><span data-ttu-id="936a3-102">열거형 형식은 nullable일 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="936a3-102">Enum types cannot be nullable</span></span>
-<span data-ttu-id="936a3-103">열거형을 선언하는 데 사용되는 기본 형식은 nullable일 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="936a3-103">The underlying type that is used to declare an enumeration cannot be nullable.</span></span> <span data-ttu-id="936a3-104">예를 들어 다음 코드는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="936a3-104">For example, the following code causes this error:</span></span>  
+# <a name="enum-types-cannot-be-nullable"></a><span data-ttu-id="9f864-102">열거형 형식은 nullable일 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9f864-102">Enum types cannot be nullable</span></span>
+<span data-ttu-id="9f864-103">열거형을 선언하는 데 사용되는 기본 형식은 nullable일 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9f864-103">The underlying type that is used to declare an enumeration cannot be nullable.</span></span> <span data-ttu-id="9f864-104">예를 들어 다음 코드는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="9f864-104">For example, the following code causes this error:</span></span>  
   
 ```vb  
 '' Not valid.  
@@ -24,12 +24,12 @@ ms.locfileid: "33628224"
 ' End Enum  
 ```  
   
- <span data-ttu-id="936a3-105">**오류 ID:** BC32129</span><span class="sxs-lookup"><span data-stu-id="936a3-105">**Error ID:** BC32129</span></span>  
+ <span data-ttu-id="9f864-105">**오류 ID:** BC32129</span><span class="sxs-lookup"><span data-stu-id="9f864-105">**Error ID:** BC32129</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="936a3-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="936a3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9f864-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9f864-106">To correct this error</span></span>  
   
--   <span data-ttu-id="936a3-107">`Enum` 선언에 nullable 기본 형식을 사용하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="936a3-107">Do not use a nullable underlying type in an `Enum` declaration.</span></span>  
+-   <span data-ttu-id="9f864-107">`Enum` 선언에 nullable 기본 형식을 사용하지 마세요.</span><span class="sxs-lookup"><span data-stu-id="9f864-107">Do not use a nullable underlying type in an `Enum` declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="936a3-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="936a3-108">See Also</span></span>  
- [<span data-ttu-id="936a3-109">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="936a3-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)  
- [<span data-ttu-id="936a3-110">Enum 문</span><span class="sxs-lookup"><span data-stu-id="936a3-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a><span data-ttu-id="9f864-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="9f864-108">See also</span></span>
+- [<span data-ttu-id="9f864-109">Nullable 값 형식</span><span class="sxs-lookup"><span data-stu-id="9f864-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="9f864-110">Enum 문</span><span class="sxs-lookup"><span data-stu-id="9f864-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
