--- a/docs/visual-basic/misc/bc36594.md
+++ b/docs/visual-basic/misc/bc36594.md
@@ -1,5 +1,5 @@
 ---
-title: 메서드의 정의 &lt;메서드&gt; 는이 컨텍스트에서 액세스할 수 없습니다
+title: 메서드의 정의 &lt;메서드&gt; 이 컨텍스트에서 액세스할 수 없는
 ms.date: 07/20/2015
 f1_keywords:
 - bc36594
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC36594
 ms.assetid: ee0f622a-e82f-4a79-ba78-354558e64dc4
-ms.openlocfilehash: 085eb849fe604115458fcca3d5d7926cfba3ba6a
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: d9b526a3b8031b8dcf1a85bb817a2ebea16be778
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630434"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54536167"
 ---
-# <a name="definition-of-method-ltmethodgt-is-not-accessible-in-this-context"></a><span data-ttu-id="3e483-102">메서드의 정의 &lt;메서드&gt; 는이 컨텍스트에서 액세스할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="3e483-102">Definition of method &lt;method&gt; is not accessible in this context</span></span>
-<span data-ttu-id="3e483-103">존재하지 않는 집계 함수가 `Into` 연산자에 포함되었습니다.</span><span class="sxs-lookup"><span data-stu-id="3e483-103">An aggregate function that does not exist has been included with the `Into` operator.</span></span>  
+# <a name="definition-of-method-ltmethodgt-is-not-accessible-in-this-context"></a><span data-ttu-id="f88b3-102">메서드의 정의 &lt;메서드&gt; 이 컨텍스트에서 액세스할 수 없는</span><span class="sxs-lookup"><span data-stu-id="f88b3-102">Definition of method &lt;method&gt; is not accessible in this context</span></span>
+<span data-ttu-id="f88b3-103">존재하지 않는 집계 함수가 `Into` 연산자에 포함되었습니다.</span><span class="sxs-lookup"><span data-stu-id="f88b3-103">An aggregate function that does not exist has been included with the `Into` operator.</span></span>  
   
- <span data-ttu-id="3e483-104">**오류 ID:** BC36594</span><span class="sxs-lookup"><span data-stu-id="3e483-104">**Error ID:** BC36594</span></span>  
+ <span data-ttu-id="f88b3-104">**오류 ID:** BC36594</span><span class="sxs-lookup"><span data-stu-id="f88b3-104">**Error ID:** BC36594</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3e483-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3e483-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f88b3-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f88b3-105">To correct this error</span></span>  
   
--   <span data-ttu-id="3e483-106">집계 함수 이름의 철자를 확인하고 필요한 경우 수정합니다.</span><span class="sxs-lookup"><span data-stu-id="3e483-106">Check the spelling of the aggregate function name and make any necessary corrections.</span></span>  
+-   <span data-ttu-id="f88b3-106">집계 함수 이름의 철자를 확인하고 필요한 경우 수정합니다.</span><span class="sxs-lookup"><span data-stu-id="f88b3-106">Check the spelling of the aggregate function name and make any necessary corrections.</span></span>  
   
--   <span data-ttu-id="3e483-107">메서드를 사용자 지정 집계 함수로 추가합니다(확장 메서드).</span><span class="sxs-lookup"><span data-stu-id="3e483-107">Add the method as a custom aggregate function (extension method).</span></span> <span data-ttu-id="3e483-108">사용자 정의 집계 함수를 만드는 방법에 대 한 자세한 내용은 참조 [Aggregate 절](../../visual-basic/language-reference/queries/aggregate-clause.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="3e483-108">For more information about creating a custom aggregate function, see [Aggregate Clause](../../visual-basic/language-reference/queries/aggregate-clause.md).</span></span>  
+-   <span data-ttu-id="f88b3-107">메서드를 사용자 지정 집계 함수로 추가합니다(확장 메서드).</span><span class="sxs-lookup"><span data-stu-id="f88b3-107">Add the method as a custom aggregate function (extension method).</span></span> <span data-ttu-id="f88b3-108">사용자 지정 집계 함수를 만드는 방법에 대 한 자세한 내용은 참조 하세요. [Aggregate 절](../../visual-basic/language-reference/queries/aggregate-clause.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="f88b3-108">For more information about creating a custom aggregate function, see [Aggregate Clause](../../visual-basic/language-reference/queries/aggregate-clause.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3e483-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3e483-109">See Also</span></span>  
- [<span data-ttu-id="3e483-110">Aggregate 절</span><span class="sxs-lookup"><span data-stu-id="3e483-110">Aggregate Clause</span></span>](../../visual-basic/language-reference/queries/aggregate-clause.md)  
- [<span data-ttu-id="3e483-111">Group By 절</span><span class="sxs-lookup"><span data-stu-id="3e483-111">Group By Clause</span></span>](../../visual-basic/language-reference/queries/group-by-clause.md)  
- [<span data-ttu-id="3e483-112">Group Join 절</span><span class="sxs-lookup"><span data-stu-id="3e483-112">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)  
- [<span data-ttu-id="3e483-113">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="3e483-113">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)  
- [<span data-ttu-id="3e483-114">LINQ</span><span class="sxs-lookup"><span data-stu-id="3e483-114">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+## <a name="see-also"></a><span data-ttu-id="f88b3-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="f88b3-109">See also</span></span>
+- [<span data-ttu-id="f88b3-110">Aggregate 절</span><span class="sxs-lookup"><span data-stu-id="f88b3-110">Aggregate Clause</span></span>](../../visual-basic/language-reference/queries/aggregate-clause.md)
+- [<span data-ttu-id="f88b3-111">Group By 절</span><span class="sxs-lookup"><span data-stu-id="f88b3-111">Group By Clause</span></span>](../../visual-basic/language-reference/queries/group-by-clause.md)
+- [<span data-ttu-id="f88b3-112">Group Join 절</span><span class="sxs-lookup"><span data-stu-id="f88b3-112">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)
+- [<span data-ttu-id="f88b3-113">Visual Basic의 LINQ 소개</span><span class="sxs-lookup"><span data-stu-id="f88b3-113">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="f88b3-114">LINQ</span><span class="sxs-lookup"><span data-stu-id="f88b3-114">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
